--- a/results/latex/rectangles.tex
+++ b/results/latex/rectangles.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.70     & 0.68      & 0.68      & 0.74      & 0.72      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.70   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.69  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.70  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.70     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.75     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.78  & 0.78  & 0.74  & 0.76  & 0.78  & 0.76  & 0.78  & 0.76  \\\\
-\\textbf{12}         & Rand               &              & - & 0.77 & 0.78 & 0.74 & 0.71 & 0.77 & 0.77 & 0.78 & 0.77 \\\\
-                     & DBC+R              &              & - & 0.78 & 0.77 & 0.74 & 0.72 & 0.78 & 0.76 & 0.78 & 0.77 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.78  & 0.79  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.78 & 0.79 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.78 & 0.80 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.72     & 0.69      & 0.69      & 0.74      & 0.70      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.72   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.71  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.72  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.71     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.73     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.78  & 0.78  & 0.75  & 0.78  & 0.78  & 0.76  & 0.78  & 0.76  \\\\
-\\textbf{12}         & Rand               &              & - & 0.78 & 0.78 & 0.75 & 0.71 & 0.77 & 0.76 & 0.77 & 0.75 \\\\
-                     & DBC+R              &              & - & 0.79 & 0.78 & 0.74 & 0.74 & 0.78 & 0.76 & 0.78 & 0.76 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.77  & 0.77  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.78 & 0.79 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.76 & 0.77 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.69     & 0.68      & 0.68      & 0.74      & 0.60      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.69   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.68  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.69  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.70     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.79     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.76  & 0.78  & 0.74  & 0.72  & 0.78  & 0.79  & 0.78  & 0.76  \\\\
-\\textbf{12}         & Rand               &              & - & 0.76 & 0.77 & 0.73 & 0.70 & 0.77 & 0.80 & 0.79 & 0.81 \\\\
-                     & DBC+R              &              & - & 0.75 & 0.76 & 0.74 & 0.66 & 0.78 & 0.77 & 0.78 & 0.79 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.82  & 0.85  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.80 & 0.81 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.82 & 0.85 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.70     & 0.68      & 0.68      & 0.74      & 0.65      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.70   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.69  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.70  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.70     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.76     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.77  & 0.77  & 0.74  & 0.74  & 0.78  & 0.77  & 0.78  & 0.75  \\\\
-\\textbf{12}         & Rand               &              & - & 0.77 & 0.77 & 0.74 & 0.70 & 0.77 & 0.77 & 0.78 & 0.77 \\\\
-                     & DBC+R              &              & - & 0.77 & 0.76 & 0.74 & 0.69 & 0.78 & 0.76 & 0.78 & 0.77 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.79  & 0.80  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.79 & 0.79 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.78 & 0.81 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.72     & 0.71      & 0.71      & 0.76      & 0.83      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.72   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.73  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.72  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.72     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.80     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.83  & 0.83  & 0.77  & 0.87  & 0.83  & 0.86  & 0.82  & 0.86  \\\\
-\\textbf{12}         & Rand               &              & - & 0.82 & 0.83 & 0.76 & 0.82 & 0.82 & 0.85 & 0.82 & 0.85 \\\\
-                     & DBC+R              &              & - & 0.82 & 0.82 & 0.76 & 0.82 & 0.83 & 0.86 & 0.83 & 0.86 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.82  & 0.85  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.83 & 0.85 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.82 & 0.85 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    1 & DBC & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    1 & Rand & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
+    1 & DBC+R & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    2 & - & PSO & 100 & Voting & 0.75 $\pm$ 0.04 & 0.73 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.76 $\pm$ 0.05 & 0.8 $\pm$ 0.04 \\
+    3 & - & - & 75 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
+    3 & - & - & 50 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
+    4 & - & - & 100 & Weighted & 0.74 $\pm$ 0.05 & 0.74 $\pm$ 0.04 & 0.7 $\pm$ 0.1 & 0.74 $\pm$ 0.06 & 0.76 $\pm$ 0.06 \\
+    4 & - & - & 100 & Meta & 0.72 $\pm$ 0.08 & 0.7 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    123 & DBC & Crossval & 75 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.03 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.83 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 75 & Voting & 0.77 $\pm$ 0.04 & 0.78 $\pm$ 0.05 & 0.76 $\pm$ 0.08 & 0.77 $\pm$ 0.04 & 0.82 $\pm$ 0.03 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.78 $\pm$ 0.05 & 0.79 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.82 $\pm$ 0.04 \\
+    123 & DBC & Crossval & 50 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.77 $\pm$ 0.06 & 0.83 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 50 & Voting & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.05 & 0.77 $\pm$ 0.09 & 0.77 $\pm$ 0.05 & 0.83 $\pm$ 0.03 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.77 $\pm$ 0.04 & 0.78 $\pm$ 0.04 & 0.76 $\pm$ 0.09 & 0.76 $\pm$ 0.05 & 0.82 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.74 $\pm$ 0.04 & 0.75 $\pm$ 0.04 & 0.74 $\pm$ 0.09 & 0.74 $\pm$ 0.05 & 0.77 $\pm$ 0.05 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.74 $\pm$ 0.03 & 0.75 $\pm$ 0.03 & 0.73 $\pm$ 0.09 & 0.74 $\pm$ 0.04 & 0.76 $\pm$ 0.06 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.09 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.05 \\
+    124 & DBC & Crossval & 100 & Meta & 0.76 $\pm$ 0.04 & 0.78 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.74 $\pm$ 0.06 & 0.87 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Meta & 0.71 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.72 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
+    124 & DBC & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.05 & 0.82 $\pm$ 0.03 \\
+    124 & Rand & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.8 $\pm$ 0.08 & 0.79 $\pm$ 0.04 & 0.83 $\pm$ 0.04 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.76 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.05 & 0.82 $\pm$ 0.04 \\
+    124 & DBC & PSO & 100 & Meta & 0.79 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.85 $\pm$ 0.08 & 0.8 $\pm$ 0.03 & 0.85 $\pm$ 0.05 \\
+    124 & Rand & PSO & 100 & Meta & 0.79 $\pm$ 0.05 & 0.79 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.06 & 0.85 $\pm$ 0.03 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.8 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.85 $\pm$ 0.08 & 0.81 $\pm$ 0.03 & 0.85 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.77 $\pm$ 0.02 & 0.77 $\pm$ 0.02 & 0.77 $\pm$ 0.06 & 0.77 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.77 $\pm$ 0.03 & 0.79 $\pm$ 0.07 & 0.78 $\pm$ 0.03 & 0.82 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.03 & 0.78 $\pm$ 0.05 & 0.78 $\pm$ 0.03 & 0.83 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.76 $\pm$ 0.02 & 0.76 $\pm$ 0.03 & 0.78 $\pm$ 0.09 & 0.77 $\pm$ 0.03 & 0.86 $\pm$ 0.06 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.77 $\pm$ 0.03 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.09 & 0.77 $\pm$ 0.04 & 0.85 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.76 $\pm$ 0.02 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.76 $\pm$ 0.04 & 0.86 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.76 $\pm$ 0.03 & 0.76 $\pm$ 0.04 & 0.8 $\pm$ 0.1 & 0.75 $\pm$ 0.05 & 0.86 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.77 $\pm$ 0.03 & 0.75 $\pm$ 0.06 & 0.81 $\pm$ 0.09 & 0.77 $\pm$ 0.04 & 0.85 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.77 $\pm$ 0.02 & 0.76 $\pm$ 0.03 & 0.79 $\pm$ 0.08 & 0.77 $\pm$ 0.03 & 0.86 $\pm$ 0.06 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
