--- a/results/latex/wdbc.tex
+++ b/results/latex/wdbc.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.78     & 0.81      & 0.86      & 0.92      & 0.91      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.60   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.84  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.80  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.73     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.94     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.44  & 0.44  & 0.97  & 0.96  & 0.98  & 0.97  & 0.97  & 0.96  \\\\
-\\textbf{12}         & Rand               &              & - & 0.87 & 0.88 & 0.95 & 0.96 & 0.94 & 0.96 & 0.94 & 0.94 \\\\
-                     & DBC+R              &              & - & 0.86 & 0.86 & 0.96 & 0.95 & 0.96 & 0.96 & 0.95 & 0.96 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.97  & 0.97  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.96 & 0.96 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.96 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.65     & 0.69      & 0.75      & 0.84      & 0.88      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.51   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.76  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.69  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.66     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.92     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.44  & 0.44  & 0.96  & 0.94  & 0.98  & 0.96  & 0.95  & 0.94  \\\\
-\\textbf{12}         & Rand               &              & - & 0.79 & 0.80 & 0.95 & 0.95 & 0.92 & 0.94 & 0.91 & 0.92 \\\\
-                     & DBC+R              &              & - & 0.80 & 0.78 & 0.95 & 0.93 & 0.94 & 0.94 & 0.94 & 0.93 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.97  & 0.97  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.98 & 0.96 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.98 & 0.96 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.94     & 0.94      & 0.97      & 0.97      & 0.88      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.99   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.89  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.93  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.97     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.92     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.99  & 0.99  & 0.95  & 0.95  & 0.96  & 0.97  & 0.97  & 0.96  \\\\
-\\textbf{12}         & Rand               &              & - & 0.93 & 0.96 & 0.93 & 0.95 & 0.95 & 0.95 & 0.94 & 0.92 \\\\
-                     & DBC+R              &              & - & 0.95 & 0.95 & 0.95 & 0.93 & 0.95 & 0.95 & 0.93 & 0.95 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.94  & 0.95  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.93 & 0.94 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.91 & 0.94 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.77     & 0.79      & 0.84      & 0.90      & 0.88      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.66   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.81  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.79  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.76     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.92     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.59  & 0.59  & 0.95  & 0.94  & 0.97  & 0.96  & 0.96  & 0.95  \\\\
-\\textbf{12}         & Rand               &              & - & 0.85 & 0.86 & 0.93 & 0.95 & 0.93 & 0.94 & 0.92 & 0.92 \\\\
-                     & DBC+R              &              & - & 0.85 & 0.85 & 0.95 & 0.93 & 0.94 & 0.94 & 0.93 & 0.94 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.95  & 0.96  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.94 & 0.95 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.93     & 0.93      & 0.94      & 0.94      & 0.92      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.95   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.93  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.92  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.97     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.98     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.98  & 0.98  & 0.98  & 0.98  & 0.98  & 0.99  & 0.98  & 0.97  \\\\
-\\textbf{12}         & Rand               &              & - & 0.96 & 0.96 & 0.97 & 0.97 & 0.96 & 0.98 & 0.96 & 0.97 \\\\
-                     & DBC+R              &              & - & 0.96 & 0.96 & 0.97 & 0.97 & 0.97 & 0.98 & 0.97 & 0.97 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.98  & 0.99  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.98 & 0.99 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.98 & 0.99 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.07 & 0.65 $\pm$ 0.09 & 0.94 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.93 $\pm$ 0.04 \\
+    1 & DBC & - & 100 & Voting & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.99 $\pm$ 0.03 & 0.66 $\pm$ 0.09 & 0.95 $\pm$ 0.02 \\
+    1 & Rand & - & 100 & Voting & 0.84 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.89 $\pm$ 0.08 & 0.81 $\pm$ 0.09 & 0.93 $\pm$ 0.05 \\
+    1 & DBC+R & - & 100 & Voting & 0.8 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.93 $\pm$ 0.04 & 0.79 $\pm$ 0.08 & 0.92 $\pm$ 0.05 \\
+    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.97 $\pm$ 0.04 & 0.8 $\pm$ 0.2 & 0.97 $\pm$ 0.03 \\
+    2 & - & PSO & 100 & Voting & 0.94 $\pm$ 0.03 & 0.92 $\pm$ 0.05 & 0.92 $\pm$ 0.06 & 0.92 $\pm$ 0.04 & 0.98 $\pm$ 0.02 \\
+    3 & - & - & 75 & Voting & 0.81 $\pm$ 0.07 & 0.69 $\pm$ 0.09 & 0.94 $\pm$ 0.04 & 0.79 $\pm$ 0.06 & 0.93 $\pm$ 0.04 \\
+    3 & - & - & 50 & Voting & 0.86 $\pm$ 0.05 & 0.75 $\pm$ 0.09 & 0.97 $\pm$ 0.04 & 0.84 $\pm$ 0.06 & 0.94 $\pm$ 0.03 \\
+    4 & - & - & 100 & Weighted & 0.92 $\pm$ 0.04 & 0.84 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.9 $\pm$ 0.04 & 0.94 $\pm$ 0.04 \\
+    4 & - & - & 100 & Meta & 0.91 $\pm$ 0.05 & 0.88 $\pm$ 0.08 & 0.88 $\pm$ 0.07 & 0.88 $\pm$ 0.06 & 0.92 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 75 & Voting & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.99 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.98 $\pm$ 0.02 \\
+    123 & Rand & Crossval & 75 & Voting & 0.87 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.93 $\pm$ 0.1 & 0.85 $\pm$ 0.1 & 0.96 $\pm$ 0.05 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.9 $\pm$ 0.1 & 0.8 $\pm$ 0.2 & 0.95 $\pm$ 0.04 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.04 \\
+    123 & DBC & Crossval & 50 & Voting & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.99 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.98 $\pm$ 0.01 \\
+    123 & Rand & Crossval & 50 & Voting & 0.88 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.96 $\pm$ 0.04 & 0.86 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.86 $\pm$ 0.09 & 0.8 $\pm$ 0.2 & 0.95 $\pm$ 0.05 & 0.85 $\pm$ 0.09 & 0.96 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.97 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.95 $\pm$ 0.03 & 0.95 $\pm$ 0.07 & 0.93 $\pm$ 0.05 & 0.93 $\pm$ 0.03 & 0.97 $\pm$ 0.04 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.96 $\pm$ 0.04 & 0.95 $\pm$ 0.07 & 0.95 $\pm$ 0.04 & 0.95 $\pm$ 0.04 & 0.97 $\pm$ 0.04 \\
+    124 & DBC & Crossval & 100 & Meta & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.04 & 0.95 $\pm$ 0.06 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
+    124 & Rand & Crossval & 100 & Meta & 0.96 $\pm$ 0.02 & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.97 $\pm$ 0.02 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.95 $\pm$ 0.05 & 0.93 $\pm$ 0.07 & 0.93 $\pm$ 0.07 & 0.93 $\pm$ 0.06 & 0.97 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Weighted & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.04 & 0.94 $\pm$ 0.06 & 0.95 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.98 $\pm$ 0.04 & 0.93 $\pm$ 0.06 & 0.95 $\pm$ 0.04 & 0.98 $\pm$ 0.03 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.98 $\pm$ 0.04 & 0.91 $\pm$ 0.07 & 0.94 $\pm$ 0.04 & 0.98 $\pm$ 0.01 \\
+    124 & DBC & PSO & 100 & Meta & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.03 & 0.95 $\pm$ 0.04 & 0.96 $\pm$ 0.03 & 0.99 $\pm$ 0.01 \\
+    124 & Rand & PSO & 100 & Meta & 0.96 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.995 $\pm$ 0.007 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.96 $\pm$ 0.02 & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.03 & 0.993 $\pm$ 0.009 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.02 & 0.96 $\pm$ 0.03 & 0.97 $\pm$ 0.02 & 0.98 $\pm$ 0.01 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.94 $\pm$ 0.04 & 0.92 $\pm$ 0.09 & 0.95 $\pm$ 0.04 & 0.93 $\pm$ 0.04 & 0.96 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.08 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.04 & 0.97 $\pm$ 0.04 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.97 $\pm$ 0.02 & 0.95 $\pm$ 0.03 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.02 & 0.98 $\pm$ 0.01 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.94 $\pm$ 0.03 & 0.91 $\pm$ 0.08 & 0.94 $\pm$ 0.06 & 0.92 $\pm$ 0.04 & 0.96 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.95 $\pm$ 0.03 & 0.94 $\pm$ 0.08 & 0.93 $\pm$ 0.06 & 0.93 $\pm$ 0.04 & 0.97 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.97 $\pm$ 0.01 & 0.96 $\pm$ 0.04 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.02 & 0.99 $\pm$ 0.02 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.96 $\pm$ 0.03 & 0.94 $\pm$ 0.05 & 0.95 $\pm$ 0.04 & 0.94 $\pm$ 0.03 & 0.98 $\pm$ 0.02 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.96 $\pm$ 0.02 & 0.94 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.02 & 0.97 $\pm$ 0.02 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.94 $\pm$ 0.05 & 0.92 $\pm$ 0.07 & 0.92 $\pm$ 0.07 & 0.92 $\pm$ 0.06 & 0.97 $\pm$ 0.02 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.96 $\pm$ 0.02 & 0.93 $\pm$ 0.04 & 0.95 $\pm$ 0.05 & 0.94 $\pm$ 0.03 & 0.97 $\pm$ 0.02 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
