--- a/templates/modelo_tabela_completa.tex
+++ b/templates/modelo_tabela_completa.tex
@@ -1,49 +1,49 @@
 \begin{table}[ht]
     \centering
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllll}
+    \begin{tabular}{llllllllll}
     \toprule
-    \textbf{Variation} & Accuracy & Recall & Precision & F1-Score & AUC \\ \midrule
-    [0-N-100-MV]
-    [1-DBC-100-MV]
-    [1-Rand-100-MV]
-    [1-DBC+R-100-MV]
-    [2-N-100-MV]
-    [3-N-75-MV]
-    [3-N-50-MV]
-    [4-N-100-WM]
-    [4-N-100-MC]
-    [5-N-100-MV]
-    [123-DBC-75-MV]
-    [123-Rand-75-MV]
-    [123-DBC+R-75-MV]
-    [123-DBC-50-MV]
-    [123-Rand-50-MV]
-    [123-DBC+R-50-MV]
-    [124-DBC-100-WM]
-    [124-Rand-100-WM]
-    [124-DBC+R-100-WM]
-    [124-DBC-100-MC]
-    [124-Rand-100-MC]
-    [124-DBC+R-100-MC]
-    [145-DBC-100-WM]
-    [145-Rand-100-WM]
-    [145-DBC+R-100-WM]
-    [145-DBC-100-MC]
-    [145-Rand-100-MC]
-    [145-DBC+R-100-MC]
-    [1234-DBC-75-WM]
-    [1234-Rand-75-WM]
-    [1234-DBC+R-75-WM]
-    [1234-DBC-50-WM]
-    [1234-Rand-50-WM]
-    [1234-DBC+R-50-WM]
-    [1234-DBC-75-MC]
-    [1234-Rand-75-MC]
-    [1234-DBC+R-75-MC]
-    [1234-DBC-50-MC]
-    [1234-Rand-50-MC]
-    [1234-DBC+R-50-MC]
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    [0_-_-_100_Voting]
+    [1_DBC_-_100_Voting]
+    [1_Rand_-_100_Voting]
+    [1_DBC+R_-_100_Voting]
+    [2_-_Crossval_100_Voting]
+    [2_-_PSO_100_Voting]
+    [3_-_-_75_Voting]
+    [3_-_-_50_Voting]
+    [4_-_-_100_Weighted]
+    [4_-_-_100_Meta]
+    [123_DBC_Crossval_75_Voting]
+    [123_Rand_Crossval_75_Voting]
+    [123_DBC+R_Crossval_75_Voting]
+    [123_DBC_Crossval_50_Voting]
+    [123_Rand_Crossval_50_Voting]
+    [123_DBC+R_Crossval_50_Voting]
+    [124_DBC_Crossval_100_Weighted]
+    [124_Rand_Crossval_100_Weighted]
+    [124_DBC+R_Crossval_100_Weighted]
+    [124_DBC_Crossval_100_Meta]
+    [124_Rand_Crossval_100_Meta]
+    [124_DBC+R_Crossval_100_Meta]
+    [124_DBC_PSO_100_Weighted]
+    [124_Rand_PSO_100_Weighted]
+    [124_DBC+R_PSO_100_Weighted]
+    [124_DBC_PSO_100_Meta]
+    [124_Rand_PSO_100_Meta]
+    [124_DBC+R_PSO_100_Meta]
+    [1234_DBC_Crossval_75_Weighted]
+    [1234_Rand_Crossval_75_Weighted]
+    [1234_DBC+R_Crossval_75_Weighted]
+    [1234_DBC_Crossval_50_Weighted]
+    [1234_Rand_Crossval_50_Weighted]
+    [1234_DBC+R_Crossval_50_Weighted]
+    [1234_DBC_Crossval_75_Meta]
+    [1234_Rand_Crossval_75_Meta]
+    [1234_DBC+R_Crossval_75_Meta]
+    [1234_DBC_Crossval_50_Meta]
+    [1234_Rand_Crossval_50_Meta]
+    [1234_DBC+R_Crossval_50_Meta]
     \bottomrule
     \end{tabular}
     }
