--- a/results/latex/australian_credit.tex
+++ b/results/latex/australian_credit.tex
@@ -1,49 +1,49 @@
 \begin{table}[ht]
     \centering
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllll}
+    \begin{tabular}{llllllllll}
     \toprule
-    \textbf{Variation} & Accuracy & Recall & Precision & F1-Score & AUC \\ \midrule
-    0Majority Voting 100\% feats. & 0.69 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    1 DBC Majority Voting 100\% feats. & 0.73 $\pm$ 0.09 & 0.8 $\pm$ 0.06 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.1 \\
-    1 Rand Score Majority Voting 100\% feats. & 0.75 $\pm$ 0.09 & 0.81 $\pm$ 0.08 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    1 DBC + Rand Majority Voting 100\% feats. & 0.75 $\pm$ 0.09 & 0.81 $\pm$ 0.08 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
-    2Majority Voting 100\% feats. & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.88 $\pm$ 0.08 & 0.84 $\pm$ 0.03 & 0.88 $\pm$ 0.02 \\
-    3Majority Voting 75\% feats. & 0.7 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.09 \\
-    3Majority Voting 50\% feats. & 0.7 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.09 \\
-    4Weighted Membership 100\% feats. & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.7 $\pm$ 0.1 \\
-    4Meta Classifier 100\% feats. & 0.73 $\pm$ 0.08 & 0.76 $\pm$ 0.09 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.81 $\pm$ 0.06 \\
-    5Majority Voting 100\% feats. & 0.83 $\pm$ 0.07 & 0.87 $\pm$ 0.07 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.88 $\pm$ 0.04 \\
-    123 DBC Majority Voting 75\% feats. & 0.82 $\pm$ 0.04 & 0.81 $\pm$ 0.04 & 0.78 $\pm$ 0.1 & 0.79 $\pm$ 0.05 & 0.87 $\pm$ 0.05 \\
-    123 Rand Score Majority Voting 75\% feats. & 0.82 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.79 $\pm$ 0.09 & 0.79 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    123 DBC + Rand Majority Voting 75\% feats. & 0.83 $\pm$ 0.04 & 0.82 $\pm$ 0.05 & 0.79 $\pm$ 0.1 & 0.8 $\pm$ 0.06 & 0.87 $\pm$ 0.05 \\
-    123 DBC Majority Voting 50\% feats. & 0.81 $\pm$ 0.06 & 0.8 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.1 & 0.88 $\pm$ 0.04 \\
-    123 Rand Score Majority Voting 50\% feats. & 0.83 $\pm$ 0.04 & 0.81 $\pm$ 0.05 & 0.81 $\pm$ 0.1 & 0.8 $\pm$ 0.06 & 0.88 $\pm$ 0.04 \\
-    123 DBC + Rand Majority Voting 50\% feats. & 0.83 $\pm$ 0.05 & 0.81 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.07 & 0.88 $\pm$ 0.04 \\
-    124 DBC Weighted Membership 100\% feats. & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
-    124 Rand Score Weighted Membership 100\% feats. & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
-    124 DBC + Rand Weighted Membership 100\% feats. & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
-    124 DBC Meta Classifier 100\% feats. & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.86 $\pm$ 0.05 & 0.83 $\pm$ 0.03 & 0.9 $\pm$ 0.03 \\
-    124 Rand Score Meta Classifier 100\% feats. & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.88 $\pm$ 0.06 & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.03 \\
-    124 DBC + Rand Meta Classifier 100\% feats. & 0.84 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.86 $\pm$ 0.06 & 0.83 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
-    145 DBC Weighted Membership 100\% feats. & 0.84 $\pm$ 0.03 & 0.83 $\pm$ 0.05 & 0.81 $\pm$ 0.09 & 0.82 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
-    145 Rand Score Weighted Membership 100\% feats. & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.05 & 0.82 $\pm$ 0.07 & 0.83 $\pm$ 0.04 & 0.9 $\pm$ 0.03 \\
-    145 DBC + Rand Weighted Membership 100\% feats. & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.05 & 0.8 $\pm$ 0.08 & 0.82 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
-    145 DBC Meta Classifier 100\% feats. & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.84 $\pm$ 0.04 & 0.91 $\pm$ 0.03 \\
-    145 Rand Score Meta Classifier 100\% feats. & 0.86 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.05 & 0.85 $\pm$ 0.02 & 0.91 $\pm$ 0.04 \\
-    145 DBC + Rand Meta Classifier 100\% feats. & 0.86 $\pm$ 0.03 & 0.82 $\pm$ 0.06 & 0.87 $\pm$ 0.04 & 0.84 $\pm$ 0.03 & 0.9 $\pm$ 0.03 \\
-    1234 DBC Weighted Membership 75\% feats. & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.04 & 0.84 $\pm$ 0.09 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.04 \\
-    1234 Rand Score Weighted Membership 75\% feats. & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.84 $\pm$ 0.09 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    1234 DBC + Rand Weighted Membership 75\% feats. & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    1234 DBC Weighted Membership 50\% feats. & 0.86 $\pm$ 0.03 & 0.84 $\pm$ 0.04 & 0.85 $\pm$ 0.07 & 0.84 $\pm$ 0.03 & 0.89 $\pm$ 0.03 \\
-    1234 Rand Score Weighted Membership 50\% feats. & 0.86 $\pm$ 0.03 & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.08 & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.04 \\
-    1234 DBC + Rand Weighted Membership 50\% feats. & 0.86 $\pm$ 0.03 & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.09 & 0.84 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
-    1234 DBC Meta Classifier 75\% feats. & 0.83 $\pm$ 0.04 & 0.8 $\pm$ 0.05 & 0.85 $\pm$ 0.07 & 0.82 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    1234 Rand Score Meta Classifier 75\% feats. & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.03 & 0.86 $\pm$ 0.07 & 0.83 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
-    1234 DBC + Rand Meta Classifier 75\% feats. & 0.84 $\pm$ 0.04 & 0.8 $\pm$ 0.05 & 0.85 $\pm$ 0.07 & 0.82 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
-    1234 DBC Meta Classifier 50\% feats. & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.87 $\pm$ 0.05 & 0.84 $\pm$ 0.03 & 0.89 $\pm$ 0.04 \\
-    1234 Rand Score Meta Classifier 50\% feats. & 0.85 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.06 & 0.83 $\pm$ 0.02 & 0.88 $\pm$ 0.04 \\
-    1234 DBC + Rand Meta Classifier 50\% feats. & 0.85 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.06 & 0.83 $\pm$ 0.02 & 0.89 $\pm$ 0.04 \\
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.69 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    1 & DBC & - & 100 & Voting & 0.73 $\pm$ 0.09 & 0.8 $\pm$ 0.06 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.1 \\
+    1 & Rand & - & 100 & Voting & 0.75 $\pm$ 0.09 & 0.81 $\pm$ 0.08 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    1 & DBC+R & - & 100 & Voting & 0.75 $\pm$ 0.09 & 0.81 $\pm$ 0.08 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    2 & - & Crossval & 100 & Voting & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.88 $\pm$ 0.08 & 0.84 $\pm$ 0.03 & 0.88 $\pm$ 0.02 \\
+    2 & - & PSO & 100 & Voting & 0.83 $\pm$ 0.07 & 0.87 $\pm$ 0.07 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.88 $\pm$ 0.04 \\
+    3 & - & - & 75 & Voting & 0.7 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.09 \\
+    3 & - & - & 50 & Voting & 0.7 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.77 $\pm$ 0.09 \\
+    4 & - & - & 100 & Weighted & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.7 $\pm$ 0.1 \\
+    4 & - & - & 100 & Meta & 0.73 $\pm$ 0.08 & 0.76 $\pm$ 0.09 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.1 & 0.81 $\pm$ 0.06 \\
+    123 & DBC & Crossval & 75 & Voting & 0.82 $\pm$ 0.04 & 0.81 $\pm$ 0.04 & 0.78 $\pm$ 0.1 & 0.79 $\pm$ 0.05 & 0.87 $\pm$ 0.05 \\
+    123 & Rand & Crossval & 75 & Voting & 0.82 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.79 $\pm$ 0.09 & 0.79 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.83 $\pm$ 0.04 & 0.82 $\pm$ 0.05 & 0.79 $\pm$ 0.1 & 0.8 $\pm$ 0.06 & 0.87 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 50 & Voting & 0.81 $\pm$ 0.06 & 0.8 $\pm$ 0.06 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.1 & 0.88 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 50 & Voting & 0.83 $\pm$ 0.04 & 0.81 $\pm$ 0.05 & 0.81 $\pm$ 0.1 & 0.8 $\pm$ 0.06 & 0.88 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.83 $\pm$ 0.05 & 0.81 $\pm$ 0.05 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.07 & 0.88 $\pm$ 0.04 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Meta & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.86 $\pm$ 0.05 & 0.83 $\pm$ 0.03 & 0.9 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Meta & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.88 $\pm$ 0.06 & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.84 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.86 $\pm$ 0.06 & 0.83 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
+    124 & DBC & PSO & 100 & Weighted & 0.84 $\pm$ 0.03 & 0.83 $\pm$ 0.05 & 0.81 $\pm$ 0.09 & 0.82 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
+    124 & Rand & PSO & 100 & Weighted & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.05 & 0.82 $\pm$ 0.07 & 0.83 $\pm$ 0.04 & 0.9 $\pm$ 0.03 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.85 $\pm$ 0.03 & 0.85 $\pm$ 0.05 & 0.8 $\pm$ 0.08 & 0.82 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Meta & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.05 & 0.84 $\pm$ 0.04 & 0.91 $\pm$ 0.03 \\
+    124 & Rand & PSO & 100 & Meta & 0.86 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.05 & 0.85 $\pm$ 0.02 & 0.91 $\pm$ 0.04 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.86 $\pm$ 0.03 & 0.82 $\pm$ 0.06 & 0.87 $\pm$ 0.04 & 0.84 $\pm$ 0.03 & 0.9 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.04 & 0.84 $\pm$ 0.09 & 0.83 $\pm$ 0.05 & 0.89 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.85 $\pm$ 0.04 & 0.83 $\pm$ 0.05 & 0.84 $\pm$ 0.09 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.05 & 0.84 $\pm$ 0.08 & 0.83 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.86 $\pm$ 0.03 & 0.84 $\pm$ 0.04 & 0.85 $\pm$ 0.07 & 0.84 $\pm$ 0.03 & 0.89 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.86 $\pm$ 0.03 & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.08 & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.86 $\pm$ 0.03 & 0.85 $\pm$ 0.04 & 0.84 $\pm$ 0.09 & 0.84 $\pm$ 0.04 & 0.89 $\pm$ 0.04 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.83 $\pm$ 0.04 & 0.8 $\pm$ 0.05 & 0.85 $\pm$ 0.07 & 0.82 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.03 & 0.86 $\pm$ 0.07 & 0.83 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.84 $\pm$ 0.04 & 0.8 $\pm$ 0.05 & 0.85 $\pm$ 0.07 & 0.82 $\pm$ 0.05 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.85 $\pm$ 0.03 & 0.81 $\pm$ 0.04 & 0.87 $\pm$ 0.05 & 0.84 $\pm$ 0.03 & 0.89 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.85 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.06 & 0.83 $\pm$ 0.02 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.85 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.85 $\pm$ 0.06 & 0.83 $\pm$ 0.02 & 0.89 $\pm$ 0.04 \\
     \bottomrule
     \end{tabular}
     }
