--- a/results/latex/blood.tex
+++ b/results/latex/blood.tex
@@ -1,49 +1,49 @@
 \begin{table}[ht]
     \centering
     \resizebox{\textwidth}{!}{
-    \begin{tabular}{llllll}
+    \begin{tabular}{llllllllll}
     \toprule
-    \textbf{Variation} & Accuracy & Recall & Precision & F1-Score & AUC \\ \midrule
-    0Majority Voting 100\% feats. & 0.78 $\pm$ 0.02 & 0.7 $\pm$ 0.3 & 0.12 $\pm$ 0.07 & 0.2 $\pm$ 0.1 & 0.65 $\pm$ 0.06 \\
-    1 DBC Majority Voting 100\% feats. & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.11 $\pm$ 0.06 & 0.17 $\pm$ 0.09 & 0.6 $\pm$ 0.09 \\
-    1 Rand Score Majority Voting 100\% feats. & 0.73 $\pm$ 0.05 & 0.45 $\pm$ 0.07 & 0.6 $\pm$ 0.1 & 0.49 $\pm$ 0.07 & 0.71 $\pm$ 0.04 \\
-    1 DBC + Rand Majority Voting 100\% feats. & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.62 $\pm$ 0.09 \\
-    2Majority Voting 100\% feats. & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.04 & 0.07 $\pm$ 0.08 & 0.55 $\pm$ 0.05 \\
-    3Majority Voting 75\% feats. & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.04 & 0.15 $\pm$ 0.07 & 0.64 $\pm$ 0.05 \\
-    3Majority Voting 50\% feats. & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.3 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.62 $\pm$ 0.04 \\
-    4Weighted Membership 100\% feats. & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.05 & 0.43 $\pm$ 0.06 & 0.68 $\pm$ 0.06 \\
-    4Meta Classifier 100\% feats. & 0.77 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.15 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.67 $\pm$ 0.1 \\
-    5Majority Voting 100\% feats. & 0.79 $\pm$ 0.03 & 0.7 $\pm$ 0.2 & 0.24 $\pm$ 0.06 & 0.35 $\pm$ 0.08 & 0.68 $\pm$ 0.07 \\
-    123 DBC Majority Voting 75\% feats. & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.05 & 0.07 $\pm$ 0.09 & 0.55 $\pm$ 0.04 \\
-    123 Rand Score Majority Voting 75\% feats. & 0.77 $\pm$ 0.02 & 0.3 $\pm$ 0.3 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.68 $\pm$ 0.08 \\
-    123 DBC + Rand Majority Voting 75\% feats. & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.5 & 0.05 $\pm$ 0.06 & 0.08 $\pm$ 0.1 & 0.55 $\pm$ 0.05 \\
-    123 DBC Majority Voting 50\% feats. & 0.77 $\pm$ 0.01 & 0.3 $\pm$ 0.5 & 0.02 $\pm$ 0.04 & 0.04 $\pm$ 0.07 & 0.53 $\pm$ 0.04 \\
-    123 Rand Score Majority Voting 50\% feats. & 0.75 $\pm$ 0.04 & 0.3 $\pm$ 0.4 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.05 \\
-    123 DBC + Rand Majority Voting 50\% feats. & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.03 $\pm$ 0.04 & 0.05 $\pm$ 0.07 & 0.56 $\pm$ 0.09 \\
-    124 DBC Weighted Membership 100\% feats. & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.2 & 0.56 $\pm$ 0.05 \\
-    124 Rand Score Weighted Membership 100\% feats. & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.66 $\pm$ 0.09 \\
-    124 DBC + Rand Weighted Membership 100\% feats. & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.08 & 0.1 $\pm$ 0.1 & 0.58 $\pm$ 0.08 \\
-    124 DBC Meta Classifier 100\% feats. & 0.77 $\pm$ 0.01 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.06 & 0.13 $\pm$ 0.08 & 0.6 $\pm$ 0.1 \\
-    124 Rand Score Meta Classifier 100\% feats. & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.2 & 0.66 $\pm$ 0.06 \\
-    124 DBC + Rand Meta Classifier 100\% feats. & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.12 $\pm$ 0.08 & 0.2 $\pm$ 0.1 & 0.68 $\pm$ 0.07 \\
-    145 DBC Weighted Membership 100\% feats. & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.2 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.08 \\
-    145 Rand Score Weighted Membership 100\% feats. & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
-    145 DBC + Rand Weighted Membership 100\% feats. & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.69 $\pm$ 0.07 \\
-    145 DBC Meta Classifier 100\% feats. & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.1 & 0.43 $\pm$ 0.09 & 0.67 $\pm$ 0.07 \\
-    145 Rand Score Meta Classifier 100\% feats. & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.07 \\
-    145 DBC + Rand Meta Classifier 100\% feats. & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.2 & 0.34 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.69 $\pm$ 0.06 \\
-    1234 DBC Weighted Membership 75\% feats. & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.04 \\
-    1234 Rand Score Weighted Membership 75\% feats. & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.69 $\pm$ 0.09 \\
-    1234 DBC + Rand Weighted Membership 75\% feats. & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.5 & 0.07 $\pm$ 0.07 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.06 \\
-    1234 DBC Weighted Membership 50\% feats. & 0.76 $\pm$ 0.02 & 0.6 $\pm$ 0.4 & 0.08 $\pm$ 0.07 & 0.14 $\pm$ 0.09 & 0.54 $\pm$ 0.04 \\
-    1234 Rand Score Weighted Membership 50\% feats. & 0.76 $\pm$ 0.03 & 0.5 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
-    1234 DBC + Rand Weighted Membership 50\% feats. & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.07 \\
-    1234 DBC Meta Classifier 75\% feats. & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.09 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.65 $\pm$ 0.07 \\
-    1234 Rand Score Meta Classifier 75\% feats. & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.07 \\
-    1234 DBC + Rand Meta Classifier 75\% feats. & 0.76 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.07 $\pm$ 0.07 & 0.12 $\pm$ 0.1 & 0.65 $\pm$ 0.05 \\
-    1234 DBC Meta Classifier 50\% feats. & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.66 $\pm$ 0.07 \\
-    1234 Rand Score Meta Classifier 50\% feats. & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
-    1234 DBC + Rand Meta Classifier 50\% feats. & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.05 $\pm$ 0.05 & 0.08 $\pm$ 0.08 & 0.63 $\pm$ 0.06 \\
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.02 & 0.7 $\pm$ 0.3 & 0.12 $\pm$ 0.07 & 0.2 $\pm$ 0.1 & 0.65 $\pm$ 0.06 \\
+    1 & DBC & - & 100 & Voting & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.11 $\pm$ 0.06 & 0.17 $\pm$ 0.09 & 0.6 $\pm$ 0.09 \\
+    1 & Rand & - & 100 & Voting & 0.73 $\pm$ 0.05 & 0.45 $\pm$ 0.07 & 0.6 $\pm$ 0.1 & 0.49 $\pm$ 0.07 & 0.71 $\pm$ 0.04 \\
+    1 & DBC+R & - & 100 & Voting & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.62 $\pm$ 0.09 \\
+    2 & - & Crossval & 100 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.04 & 0.07 $\pm$ 0.08 & 0.55 $\pm$ 0.05 \\
+    2 & - & PSO & 100 & Voting & 0.79 $\pm$ 0.03 & 0.7 $\pm$ 0.2 & 0.24 $\pm$ 0.06 & 0.35 $\pm$ 0.08 & 0.68 $\pm$ 0.07 \\
+    3 & - & - & 75 & Voting & 0.77 $\pm$ 0.02 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.04 & 0.15 $\pm$ 0.07 & 0.64 $\pm$ 0.05 \\
+    3 & - & - & 50 & Voting & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.3 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.62 $\pm$ 0.04 \\
+    4 & - & - & 100 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.05 & 0.43 $\pm$ 0.06 & 0.68 $\pm$ 0.06 \\
+    4 & - & - & 100 & Meta & 0.77 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.15 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.67 $\pm$ 0.1 \\
+    123 & DBC & Crossval & 75 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.5 & 0.04 $\pm$ 0.05 & 0.07 $\pm$ 0.09 & 0.55 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 75 & Voting & 0.77 $\pm$ 0.02 & 0.3 $\pm$ 0.3 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.68 $\pm$ 0.08 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.5 & 0.05 $\pm$ 0.06 & 0.08 $\pm$ 0.1 & 0.55 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 50 & Voting & 0.77 $\pm$ 0.01 & 0.3 $\pm$ 0.5 & 0.02 $\pm$ 0.04 & 0.04 $\pm$ 0.07 & 0.53 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 50 & Voting & 0.75 $\pm$ 0.04 & 0.3 $\pm$ 0.4 & 0.2 $\pm$ 0.2 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.05 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.77 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.03 $\pm$ 0.04 & 0.05 $\pm$ 0.07 & 0.56 $\pm$ 0.09 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.2 & 0.56 $\pm$ 0.05 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.66 $\pm$ 0.09 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.76 $\pm$ 0.02 & 0.4 $\pm$ 0.4 & 0.1 $\pm$ 0.08 & 0.1 $\pm$ 0.1 & 0.58 $\pm$ 0.08 \\
+    124 & DBC & Crossval & 100 & Meta & 0.77 $\pm$ 0.01 & 0.6 $\pm$ 0.3 & 0.08 $\pm$ 0.06 & 0.13 $\pm$ 0.08 & 0.6 $\pm$ 0.1 \\
+    124 & Rand & Crossval & 100 & Meta & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.2 & 0.66 $\pm$ 0.06 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.12 $\pm$ 0.08 & 0.2 $\pm$ 0.1 & 0.68 $\pm$ 0.07 \\
+    124 & DBC & PSO & 100 & Weighted & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.2 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.08 \\
+    124 & Rand & PSO & 100 & Weighted & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.78 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.69 $\pm$ 0.07 \\
+    124 & DBC & PSO & 100 & Meta & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.36 $\pm$ 0.1 & 0.43 $\pm$ 0.09 & 0.67 $\pm$ 0.07 \\
+    124 & Rand & PSO & 100 & Meta & 0.78 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.67 $\pm$ 0.07 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.78 $\pm$ 0.04 & 0.6 $\pm$ 0.2 & 0.34 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.69 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.77 $\pm$ 0.04 & 0.5 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.3 $\pm$ 0.2 & 0.69 $\pm$ 0.09 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.76 $\pm$ 0.03 & 0.6 $\pm$ 0.5 & 0.07 $\pm$ 0.07 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.76 $\pm$ 0.02 & 0.6 $\pm$ 0.4 & 0.08 $\pm$ 0.07 & 0.14 $\pm$ 0.09 & 0.54 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.76 $\pm$ 0.03 & 0.5 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.56 $\pm$ 0.07 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.09 $\pm$ 0.1 & 0.1 $\pm$ 0.1 & 0.65 $\pm$ 0.07 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.3 & 0.2 $\pm$ 0.1 & 0.2 $\pm$ 0.2 & 0.67 $\pm$ 0.07 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.76 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.07 $\pm$ 0.07 & 0.12 $\pm$ 0.1 & 0.65 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.77 $\pm$ 0.01 & 0.5 $\pm$ 0.4 & 0.06 $\pm$ 0.04 & 0.1 $\pm$ 0.08 & 0.66 $\pm$ 0.07 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.77 $\pm$ 0.02 & 0.5 $\pm$ 0.4 & 0.1 $\pm$ 0.1 & 0.2 $\pm$ 0.1 & 0.66 $\pm$ 0.08 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.76 $\pm$ 0.01 & 0.4 $\pm$ 0.4 & 0.05 $\pm$ 0.05 & 0.08 $\pm$ 0.08 & 0.63 $\pm$ 0.06 \\
     \bottomrule
     \end{tabular}
     }
