--- a/results/latex/contraceptive.tex
+++ b/results/latex/contraceptive.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.38     & 0.38      & 0.39      & 0.41      & 0.46      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.41   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.38  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.51     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.54     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.48  & 0.48  & 0.52  & 0.52  & 0.52  & 0.51  & 0.52  & 0.51  \\\\
-\\textbf{12}         & Rand               &              & - & 0.49 & 0.48 & 0.51 & 0.51 & 0.51 & 0.52 & 0.51 & 0.51 \\\\
-                     & DBC+R              &              & - & 0.47 & 0.47 & 0.51 & 0.51 & 0.51 & 0.50 & 0.51 & 0.51 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.51  & 0.54  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.51 & 0.54 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.52 & 0.53 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.38     & 0.38      & 0.39      & 0.41      & 0.46      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.41   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.38  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.51     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.54     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.48  & 0.48  & 0.52  & 0.52  & 0.52  & 0.51  & 0.52  & 0.51  \\\\
-\\textbf{12}         & Rand               &              & - & 0.49 & 0.48 & 0.51 & 0.51 & 0.51 & 0.52 & 0.51 & 0.51 \\\\
-                     & DBC+R              &              & - & 0.47 & 0.47 & 0.51 & 0.51 & 0.51 & 0.50 & 0.51 & 0.51 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.51  & 0.54  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.51 & 0.54 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.52 & 0.53 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.46     & 0.47      & 0.46      & 0.50      & 0.50      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.53   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.53  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.54  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.54     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.58     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.56  & 0.58  & 0.54  & 0.54  & 0.55  & 0.53  & 0.54  & 0.53  \\\\
-\\textbf{12}         & Rand               &              & - & 0.55 & 0.56 & 0.53 & 0.53 & 0.53 & 0.55 & 0.53 & 0.53 \\\\
-                     & DBC+R              &              & - & 0.57 & 0.59 & 0.53 & 0.53 & 0.54 & 0.52 & 0.53 & 0.53 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.53  & 0.56  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.53 & 0.58 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.55 & 0.56 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.40     & 0.40      & 0.41      & 0.45      & 0.47      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.43   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.41  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.44  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.52     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.55     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.51  & 0.51  & 0.52  & 0.52  & 0.53  & 0.51  & 0.52  & 0.51  \\\\
-\\textbf{12}         & Rand               &              & - & 0.51 & 0.51 & 0.51 & 0.52 & 0.51 & 0.53 & 0.51 & 0.52 \\\\
-                     & DBC+R              &              & - & 0.50 & 0.51 & 0.52 & 0.52 & 0.52 & 0.51 & 0.52 & 0.52 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.52  & 0.55  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.51 & 0.55 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.52 & 0.54 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.52     & 0.53      & 0.54      & 0.50      & 0.64      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.60   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.59  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.61  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.64     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.68     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.63  & 0.63  & 0.64  & 0.69  & 0.64  & 0.69  & 0.64  & 0.69  \\\\
-\\textbf{12}         & Rand               &              & - & 0.63 & 0.63 & 0.64 & 0.69 & 0.63 & 0.69 & 0.63 & 0.69 \\\\
-                     & DBC+R              &              & - & 0.62 & 0.62 & 0.63 & 0.69 & 0.62 & 0.69 & 0.63 & 0.69 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.65  & 0.71  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.67 & 0.71 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.66 & 0.71 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.38 $\pm$ 0.03 & 0.38 $\pm$ 0.03 & 0.46 $\pm$ 0.05 & 0.4 $\pm$ 0.04 & 0.52 $\pm$ 0.04 \\
+    1 & DBC & - & 100 & Voting & 0.41 $\pm$ 0.05 & 0.41 $\pm$ 0.05 & 0.53 $\pm$ 0.07 & 0.43 $\pm$ 0.05 & 0.6 $\pm$ 0.03 \\
+    1 & Rand & - & 100 & Voting & 0.38 $\pm$ 0.03 & 0.38 $\pm$ 0.03 & 0.53 $\pm$ 0.05 & 0.41 $\pm$ 0.03 & 0.59 $\pm$ 0.03 \\
+    1 & DBC+R & - & 100 & Voting & 0.42 $\pm$ 0.05 & 0.42 $\pm$ 0.05 & 0.54 $\pm$ 0.06 & 0.44 $\pm$ 0.05 & 0.61 $\pm$ 0.03 \\
+    2 & - & Crossval & 100 & Voting & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.54 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
+    2 & - & PSO & 100 & Voting & 0.54 $\pm$ 0.05 & 0.54 $\pm$ 0.05 & 0.58 $\pm$ 0.08 & 0.55 $\pm$ 0.05 & 0.68 $\pm$ 0.04 \\
+    3 & - & - & 75 & Voting & 0.38 $\pm$ 0.05 & 0.38 $\pm$ 0.05 & 0.47 $\pm$ 0.09 & 0.4 $\pm$ 0.06 & 0.53 $\pm$ 0.05 \\
+    3 & - & - & 50 & Voting & 0.39 $\pm$ 0.06 & 0.39 $\pm$ 0.06 & 0.46 $\pm$ 0.1 & 0.41 $\pm$ 0.07 & 0.54 $\pm$ 0.06 \\
+    4 & - & - & 100 & Weighted & 0.41 $\pm$ 0.02 & 0.41 $\pm$ 0.02 & 0.5 $\pm$ 0.06 & 0.45 $\pm$ 0.03 & 0.5 $\pm$ 0.03 \\
+    4 & - & - & 100 & Meta & 0.46 $\pm$ 0.03 & 0.46 $\pm$ 0.03 & 0.5 $\pm$ 0.07 & 0.47 $\pm$ 0.04 & 0.64 $\pm$ 0.02 \\
+    123 & DBC & Crossval & 75 & Voting & 0.48 $\pm$ 0.03 & 0.48 $\pm$ 0.03 & 0.56 $\pm$ 0.06 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
+    123 & Rand & Crossval & 75 & Voting & 0.49 $\pm$ 0.03 & 0.49 $\pm$ 0.03 & 0.55 $\pm$ 0.04 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.47 $\pm$ 0.03 & 0.47 $\pm$ 0.03 & 0.57 $\pm$ 0.06 & 0.5 $\pm$ 0.03 & 0.62 $\pm$ 0.02 \\
+    123 & DBC & Crossval & 50 & Voting & 0.48 $\pm$ 0.04 & 0.48 $\pm$ 0.04 & 0.58 $\pm$ 0.06 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
+    123 & Rand & Crossval & 50 & Voting & 0.48 $\pm$ 0.03 & 0.48 $\pm$ 0.03 & 0.56 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.47 $\pm$ 0.03 & 0.47 $\pm$ 0.03 & 0.59 $\pm$ 0.06 & 0.51 $\pm$ 0.03 & 0.62 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.52 $\pm$ 0.04 & 0.52 $\pm$ 0.04 & 0.54 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.64 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.63 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Meta & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    124 & DBC & PSO & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.52 $\pm$ 0.04 & 0.65 $\pm$ 0.04 \\
+    124 & Rand & PSO & 100 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.06 & 0.51 $\pm$ 0.04 & 0.67 $\pm$ 0.04 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.52 $\pm$ 0.04 & 0.52 $\pm$ 0.04 & 0.55 $\pm$ 0.06 & 0.52 $\pm$ 0.04 & 0.66 $\pm$ 0.04 \\
+    124 & DBC & PSO & 100 & Meta & 0.54 $\pm$ 0.05 & 0.54 $\pm$ 0.05 & 0.56 $\pm$ 0.06 & 0.55 $\pm$ 0.05 & 0.71 $\pm$ 0.03 \\
+    124 & Rand & PSO & 100 & Meta & 0.54 $\pm$ 0.04 & 0.54 $\pm$ 0.04 & 0.58 $\pm$ 0.05 & 0.55 $\pm$ 0.04 & 0.71 $\pm$ 0.03 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.53 $\pm$ 0.04 & 0.53 $\pm$ 0.04 & 0.56 $\pm$ 0.05 & 0.54 $\pm$ 0.04 & 0.71 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.55 $\pm$ 0.04 & 0.53 $\pm$ 0.03 & 0.64 $\pm$ 0.02 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.05 & 0.51 $\pm$ 0.04 & 0.63 $\pm$ 0.02 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.62 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.54 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.64 $\pm$ 0.02 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.04 & 0.51 $\pm$ 0.03 & 0.63 $\pm$ 0.02 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.51 $\pm$ 0.04 & 0.51 $\pm$ 0.04 & 0.53 $\pm$ 0.04 & 0.52 $\pm$ 0.03 & 0.63 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.52 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.55 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.5 $\pm$ 0.03 & 0.5 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.51 $\pm$ 0.02 & 0.51 $\pm$ 0.02 & 0.53 $\pm$ 0.03 & 0.51 $\pm$ 0.02 & 0.69 $\pm$ 0.02 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.51 $\pm$ 0.03 & 0.51 $\pm$ 0.03 & 0.53 $\pm$ 0.03 & 0.52 $\pm$ 0.03 & 0.69 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.51 $\pm$ 0.02 & 0.51 $\pm$ 0.02 & 0.53 $\pm$ 0.03 & 0.52 $\pm$ 0.02 & 0.69 $\pm$ 0.02 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
