--- a/results/latex/electricity.tex
+++ b/results/latex/electricity.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.71     & 0.70      & 0.70      & 0.69      & 0.71      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.64   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.68  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.64  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.71     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.73     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.66  & 0.66  & 0.66  & 0.69  & 0.68  & 0.71  & 0.67  & 0.71  \\\\
-\\textbf{12}         & Rand               &              & - & 0.67 & 0.67 & 0.69 & 0.70 & 0.69 & 0.71 & 0.70 & 0.71 \\\\
-                     & DBC+R              &              & - & 0.66 & 0.66 & 0.66 & 0.69 & 0.68 & 0.71 & 0.67 & 0.71 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.72  & 0.73  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.72 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.73 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.79     & 0.79      & 0.79      & 0.78      & 0.76      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.71   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.68  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.71  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.79     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.74     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.74  & 0.73  & 0.73  & 0.73  & 0.78  & 0.77  & 0.78  & 0.78  \\\\
-\\textbf{12}         & Rand               &              & - & 0.69 & 0.70 & 0.79 & 0.75 & 0.80 & 0.75 & 0.82 & 0.77 \\\\
-                     & DBC+R              &              & - & 0.74 & 0.73 & 0.73 & 0.73 & 0.78 & 0.77 & 0.78 & 0.78 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.72  & 0.74  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.73 & 0.72 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.74 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.57     & 0.55      & 0.55      & 0.53      & 0.63      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.59   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.69  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.59  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.57     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.72     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.55  & 0.55  & 0.55  & 0.59  & 0.51  & 0.60  & 0.51  & 0.59  \\\\
-\\textbf{12}         & Rand               &              & - & 0.67 & 0.65 & 0.52 & 0.60 & 0.51 & 0.63 & 0.51 & 0.61 \\\\
-                     & DBC+R              &              & - & 0.55 & 0.55 & 0.55 & 0.59 & 0.51 & 0.60 & 0.51 & 0.59 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.72  & 0.74  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.71 & 0.72 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.74 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.65     & 0.64      & 0.64      & 0.63      & 0.69      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.62   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.68  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.62  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.65     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.73     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.61  & 0.61  & 0.62  & 0.65  & 0.61  & 0.67  & 0.60  & 0.67  \\\\
-\\textbf{12}         & Rand               &              & - & 0.66 & 0.66 & 0.62 & 0.67 & 0.62 & 0.68 & 0.63 & 0.68 \\\\
-                     & DBC+R              &              & - & 0.61 & 0.61 & 0.62 & 0.65 & 0.61 & 0.67 & 0.60 & 0.67 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.72  & 0.74  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.72 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.74 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.74     & 0.74      & 0.74      & 0.74      & 0.75      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.71   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.74  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.71  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.74     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.76     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.71  & 0.71  & 0.69  & 0.74  & 0.70  & 0.74  & 0.70  & 0.74  \\\\
-\\textbf{12}         & Rand               &              & - & 0.74 & 0.74 & 0.73 & 0.74 & 0.73 & 0.75 & 0.73 & 0.74 \\\\
-                     & DBC+R              &              & - & 0.71 & 0.71 & 0.69 & 0.74 & 0.70 & 0.74 & 0.70 & 0.74 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.76  & 0.76  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.76 & 0.75 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.76 & 0.76 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.05 & 0.57 $\pm$ 0.09 & 0.65 $\pm$ 0.06 & 0.74 $\pm$ 0.04 \\
+    1 & DBC & - & 100 & Voting & 0.64 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.62 $\pm$ 0.04 & 0.71 $\pm$ 0.04 \\
+    1 & Rand & - & 100 & Voting & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.68 $\pm$ 0.03 & 0.74 $\pm$ 0.04 \\
+    1 & DBC+R & - & 100 & Voting & 0.64 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.62 $\pm$ 0.04 & 0.71 $\pm$ 0.04 \\
+    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.05 & 0.57 $\pm$ 0.09 & 0.65 $\pm$ 0.06 & 0.74 $\pm$ 0.04 \\
+    2 & - & PSO & 100 & Voting & 0.73 $\pm$ 0.03 & 0.74 $\pm$ 0.04 & 0.72 $\pm$ 0.02 & 0.73 $\pm$ 0.02 & 0.76 $\pm$ 0.04 \\
+    3 & - & - & 75 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.06 & 0.55 $\pm$ 0.08 & 0.64 $\pm$ 0.05 & 0.74 $\pm$ 0.04 \\
+    3 & - & - & 50 & Voting & 0.7 $\pm$ 0.03 & 0.79 $\pm$ 0.06 & 0.55 $\pm$ 0.08 & 0.64 $\pm$ 0.05 & 0.74 $\pm$ 0.04 \\
+    4 & - & - & 100 & Weighted & 0.69 $\pm$ 0.04 & 0.78 $\pm$ 0.07 & 0.53 $\pm$ 0.04 & 0.63 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
+    4 & - & - & 100 & Meta & 0.71 $\pm$ 0.04 & 0.76 $\pm$ 0.05 & 0.63 $\pm$ 0.07 & 0.69 $\pm$ 0.05 & 0.75 $\pm$ 0.04 \\
+    123 & DBC & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 75 & Voting & 0.67 $\pm$ 0.04 & 0.69 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.66 $\pm$ 0.07 & 0.74 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
+    123 & DBC & Crossval & 50 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
+    123 & Rand & Crossval & 50 & Voting & 0.67 $\pm$ 0.04 & 0.7 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.66 $\pm$ 0.07 & 0.74 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.66 $\pm$ 0.06 & 0.7 $\pm$ 0.1 & 0.5 $\pm$ 0.2 & 0.61 $\pm$ 0.08 & 0.71 $\pm$ 0.04 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.66 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.62 $\pm$ 0.05 & 0.69 $\pm$ 0.07 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.69 $\pm$ 0.05 & 0.79 $\pm$ 0.07 & 0.52 $\pm$ 0.08 & 0.62 $\pm$ 0.07 & 0.73 $\pm$ 0.04 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.66 $\pm$ 0.05 & 0.7 $\pm$ 0.1 & 0.55 $\pm$ 0.08 & 0.62 $\pm$ 0.05 & 0.69 $\pm$ 0.07 \\
+    124 & DBC & Crossval & 100 & Meta & 0.69 $\pm$ 0.06 & 0.73 $\pm$ 0.09 & 0.59 $\pm$ 0.1 & 0.65 $\pm$ 0.09 & 0.74 $\pm$ 0.05 \\
+    124 & Rand & Crossval & 100 & Meta & 0.7 $\pm$ 0.04 & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.69 $\pm$ 0.06 & 0.73 $\pm$ 0.09 & 0.59 $\pm$ 0.1 & 0.65 $\pm$ 0.09 & 0.74 $\pm$ 0.05 \\
+    124 & DBC & PSO & 100 & Weighted & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.76 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.03 & 0.73 $\pm$ 0.04 & 0.71 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.76 $\pm$ 0.04 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.76 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Meta & 0.73 $\pm$ 0.06 & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.06 \\
+    124 & Rand & PSO & 100 & Meta & 0.72 $\pm$ 0.02 & 0.72 $\pm$ 0.05 & 0.72 $\pm$ 0.08 & 0.72 $\pm$ 0.02 & 0.75 $\pm$ 0.03 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.73 $\pm$ 0.06 & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.03 & 0.74 $\pm$ 0.05 & 0.76 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.68 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.61 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.69 $\pm$ 0.04 & 0.8 $\pm$ 0.06 & 0.51 $\pm$ 0.09 & 0.62 $\pm$ 0.07 & 0.73 $\pm$ 0.05 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.68 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.61 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.67 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.7 $\pm$ 0.04 & 0.82 $\pm$ 0.06 & 0.51 $\pm$ 0.08 & 0.63 $\pm$ 0.07 & 0.73 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.67 $\pm$ 0.04 & 0.78 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.6 $\pm$ 0.07 & 0.7 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.75 $\pm$ 0.06 & 0.63 $\pm$ 0.08 & 0.68 $\pm$ 0.04 & 0.75 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.06 & 0.6 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.59 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.77 $\pm$ 0.05 & 0.61 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.74 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.71 $\pm$ 0.04 & 0.78 $\pm$ 0.06 & 0.59 $\pm$ 0.05 & 0.67 $\pm$ 0.04 & 0.74 $\pm$ 0.05 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
