--- a/results/latex/elipses.tex
+++ b/results/latex/elipses.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.23     & 0.23      & 0.26      & 0.69      & 0.42      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.45   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.43  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.55     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.68     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.63  & 0.64  & 0.69  & 0.70  & 0.69  & 0.64  & 0.69  & 0.69  \\\\
-\\textbf{12}         & Rand               &              & - & 0.66 & 0.62 & 0.68 & 0.68 & 0.69 & 0.69 & 0.68 & 0.69 \\\\
-                     & DBC+R              &              & - & 0.63 & 0.65 & 0.68 & 0.68 & 0.70 & 0.67 & 0.68 & 0.69 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.71  & 0.69  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.69 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.71 & 0.70 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.23     & 0.23      & 0.26      & 0.69      & 0.42      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.45   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.43  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.55     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.68     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.63  & 0.64  & 0.69  & 0.70  & 0.69  & 0.64  & 0.69  & 0.69  \\\\
-\\textbf{12}         & Rand               &              & - & 0.66 & 0.62 & 0.68 & 0.68 & 0.69 & 0.69 & 0.68 & 0.69 \\\\
-                     & DBC+R              &              & - & 0.63 & 0.65 & 0.68 & 0.68 & 0.70 & 0.67 & 0.68 & 0.69 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.71  & 0.69  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.69 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.71 & 0.70 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.25     & 0.25      & 0.28      & 0.70      & 0.49      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.47   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.47  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.47  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.60     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.75     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.71  & 0.71  & 0.72  & 0.72  & 0.72  & 0.68  & 0.71  & 0.72  \\\\
-\\textbf{12}         & Rand               &              & - & 0.71 & 0.69 & 0.72 & 0.70 & 0.72 & 0.72 & 0.71 & 0.72 \\\\
-                     & DBC+R              &              & - & 0.71 & 0.72 & 0.71 & 0.70 & 0.73 & 0.69 & 0.71 & 0.72 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.72  & 0.72  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.74 & 0.71 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.72 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.23     & 0.23      & 0.27      & 0.69      & 0.44      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.45   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.43  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.55     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.68     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.65  & 0.65  & 0.70  & 0.70  & 0.70  & 0.65  & 0.69  & 0.70  \\\\
-\\textbf{12}         & Rand               &              & - & 0.67 & 0.63 & 0.69 & 0.68 & 0.70 & 0.69 & 0.69 & 0.70 \\\\
-                     & DBC+R              &              & - & 0.65 & 0.66 & 0.69 & 0.69 & 0.70 & 0.67 & 0.69 & 0.70 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.71  & 0.69  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.69 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.71 & 0.70 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.41     & 0.42      & 0.45      & 0.77      & 0.65      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.64   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.63  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.64  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.77     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.86     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.80  & 0.80  & 0.78  & 0.89  & 0.80  & 0.85  & 0.80  & 0.88  \\\\
-\\textbf{12}         & Rand               &              & - & 0.81 & 0.80 & 0.80 & 0.87 & 0.81 & 0.88 & 0.81 & 0.88 \\\\
-                     & DBC+R              &              & - & 0.81 & 0.81 & 0.79 & 0.88 & 0.81 & 0.87 & 0.80 & 0.88 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.86  & 0.85  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.86 & 0.89 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.86 & 0.89 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.23 $\pm$ 0.05 & 0.23 $\pm$ 0.05 & 0.25 $\pm$ 0.06 & 0.23 $\pm$ 0.05 & 0.41 $\pm$ 0.05 \\
+    1 & DBC & - & 100 & Voting & 0.45 $\pm$ 0.07 & 0.45 $\pm$ 0.07 & 0.47 $\pm$ 0.08 & 0.45 $\pm$ 0.07 & 0.64 $\pm$ 0.05 \\
+    1 & Rand & - & 100 & Voting & 0.42 $\pm$ 0.05 & 0.42 $\pm$ 0.05 & 0.47 $\pm$ 0.08 & 0.42 $\pm$ 0.06 & 0.63 $\pm$ 0.05 \\
+    1 & DBC+R & - & 100 & Voting & 0.43 $\pm$ 0.06 & 0.43 $\pm$ 0.06 & 0.47 $\pm$ 0.08 & 0.43 $\pm$ 0.06 & 0.64 $\pm$ 0.05 \\
+    2 & - & Crossval & 100 & Voting & 0.55 $\pm$ 0.05 & 0.55 $\pm$ 0.05 & 0.6 $\pm$ 0.05 & 0.55 $\pm$ 0.04 & 0.77 $\pm$ 0.05 \\
+    2 & - & PSO & 100 & Voting & 0.68 $\pm$ 0.05 & 0.68 $\pm$ 0.05 & 0.75 $\pm$ 0.06 & 0.68 $\pm$ 0.05 & 0.86 $\pm$ 0.03 \\
+    3 & - & - & 75 & Voting & 0.23 $\pm$ 0.05 & 0.23 $\pm$ 0.05 & 0.25 $\pm$ 0.06 & 0.23 $\pm$ 0.05 & 0.42 $\pm$ 0.05 \\
+    3 & - & - & 50 & Voting & 0.26 $\pm$ 0.05 & 0.26 $\pm$ 0.05 & 0.28 $\pm$ 0.06 & 0.27 $\pm$ 0.05 & 0.45 $\pm$ 0.04 \\
+    4 & - & - & 100 & Weighted & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.7 $\pm$ 0.05 & 0.69 $\pm$ 0.04 & 0.77 $\pm$ 0.04 \\
+    4 & - & - & 100 & Meta & 0.42 $\pm$ 0.06 & 0.42 $\pm$ 0.06 & 0.49 $\pm$ 0.07 & 0.44 $\pm$ 0.06 & 0.65 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 75 & Voting & 0.63 $\pm$ 0.06 & 0.63 $\pm$ 0.06 & 0.71 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.8 $\pm$ 0.03 \\
+    123 & Rand & Crossval & 75 & Voting & 0.66 $\pm$ 0.06 & 0.66 $\pm$ 0.06 & 0.71 $\pm$ 0.05 & 0.67 $\pm$ 0.05 & 0.81 $\pm$ 0.03 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.63 $\pm$ 0.05 & 0.63 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.65 $\pm$ 0.04 & 0.81 $\pm$ 0.02 \\
+    123 & DBC & Crossval & 50 & Voting & 0.64 $\pm$ 0.07 & 0.64 $\pm$ 0.07 & 0.71 $\pm$ 0.08 & 0.65 $\pm$ 0.07 & 0.8 $\pm$ 0.05 \\
+    123 & Rand & Crossval & 50 & Voting & 0.62 $\pm$ 0.06 & 0.62 $\pm$ 0.06 & 0.69 $\pm$ 0.07 & 0.63 $\pm$ 0.06 & 0.8 $\pm$ 0.04 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.66 $\pm$ 0.04 & 0.81 $\pm$ 0.02 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.02 & 0.7 $\pm$ 0.03 & 0.78 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.8 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.79 $\pm$ 0.04 \\
+    124 & DBC & Crossval & 100 & Meta & 0.7 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
+    124 & Rand & Crossval & 100 & Meta & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.87 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.68 $\pm$ 0.04 & 0.68 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.88 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Weighted & 0.71 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.86 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.74 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.86 $\pm$ 0.01 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.71 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.72 $\pm$ 0.05 & 0.71 $\pm$ 0.05 & 0.86 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.05 & 0.69 $\pm$ 0.04 & 0.85 $\pm$ 0.03 \\
+    124 & Rand & PSO & 100 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.71 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.89 $\pm$ 0.02 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.7 $\pm$ 0.05 & 0.7 $\pm$ 0.05 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.05 & 0.89 $\pm$ 0.02 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.8 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.69 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.03 & 0.81 $\pm$ 0.02 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.7 $\pm$ 0.02 & 0.7 $\pm$ 0.02 & 0.73 $\pm$ 0.03 & 0.7 $\pm$ 0.02 & 0.81 $\pm$ 0.01 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.04 & 0.8 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.81 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.68 $\pm$ 0.03 & 0.68 $\pm$ 0.03 & 0.71 $\pm$ 0.03 & 0.69 $\pm$ 0.03 & 0.8 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.64 $\pm$ 0.08 & 0.64 $\pm$ 0.08 & 0.68 $\pm$ 0.06 & 0.65 $\pm$ 0.07 & 0.85 $\pm$ 0.07 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.69 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.72 $\pm$ 0.03 & 0.69 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.67 $\pm$ 0.07 & 0.67 $\pm$ 0.07 & 0.69 $\pm$ 0.07 & 0.67 $\pm$ 0.07 & 0.87 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.69 $\pm$ 0.05 & 0.69 $\pm$ 0.05 & 0.72 $\pm$ 0.04 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.69 $\pm$ 0.04 & 0.69 $\pm$ 0.04 & 0.72 $\pm$ 0.03 & 0.7 $\pm$ 0.04 & 0.88 $\pm$ 0.04 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
