--- a/results/latex/german_credit.tex
+++ b/results/latex/german_credit.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.47     & 0.46      & 0.45      & 0.41      & 0.70      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.45   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.43  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.45  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.74     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.74     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.75  & 0.74  & 0.73  & 0.74  & 0.73  & 0.76  & 0.73  & 0.74  \\\\
-\\textbf{12}         & Rand               &              & - & 0.75 & 0.74 & 0.73 & 0.74 & 0.74 & 0.76 & 0.74 & 0.75 \\\\
-                     & DBC+R              &              & - & 0.75 & 0.74 & 0.73 & 0.74 & 0.73 & 0.75 & 0.74 & 0.75 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.73  & 0.73  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.72 & 0.73 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.72 & 0.72 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.30     & 0.30      & 0.30      & 0.31      & 0.00      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.29   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.29  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.29  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.60     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.61     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.65  & 0.62  & 0.59  & 0.58  & 0.58  & 0.63  & 0.59  & 0.61  \\\\
-\\textbf{12}         & Rand               &              & - & 0.61 & 0.61 & 0.58 & 0.57 & 0.60 & 0.63 & 0.59 & 0.62 \\\\
-                     & DBC+R              &              & - & 0.63 & 0.61 & 0.58 & 0.58 & 0.57 & 0.62 & 0.61 & 0.61 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.58  & 0.57  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.55 & 0.56 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.55 & 0.55 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.58     & 0.63      & 0.65      & 0.78      & 0.00      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.57   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.63  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.58  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.40     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.32     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.41  & 0.37  & 0.38  & 0.47  & 0.41  & 0.48  & 0.40  & 0.42  \\\\
-\\textbf{12}         & Rand               &              & - & 0.38 & 0.39 & 0.38 & 0.47 & 0.39 & 0.48 & 0.42 & 0.47 \\\\
-                     & DBC+R              &              & - & 0.42 & 0.39 & 0.38 & 0.48 & 0.40 & 0.46 & 0.40 & 0.44 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.44  & 0.40  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.46 & 0.43 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.46 & 0.41 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.39     & 0.41      & 0.40      & 0.44      & 0.00      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.38   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.39  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.38  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.48     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.42     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.49  & 0.45  & 0.46  & 0.52  & 0.47  & 0.54  & 0.47  & 0.49  \\\\
-\\textbf{12}         & Rand               &              & - & 0.45 & 0.47 & 0.46 & 0.52 & 0.47 & 0.54 & 0.49 & 0.53 \\\\
-                     & DBC+R              &              & - & 0.49 & 0.47 & 0.45 & 0.52 & 0.46 & 0.52 & 0.48 & 0.50 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.49  & 0.46  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.50 & 0.48 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.50 & 0.47 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.51     & 0.51      & 0.51      & 0.52      & 0.51      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.49   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.49  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.49  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.69     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.70     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.70  & 0.68  & 0.69  & 0.71  & 0.70  & 0.71  & 0.68  & 0.71  \\\\
-\\textbf{12}         & Rand               &              & - & 0.69 & 0.68 & 0.66 & 0.72 & 0.68 & 0.73 & 0.68 & 0.73 \\\\
-                     & DBC+R              &              & - & 0.70 & 0.68 & 0.69 & 0.72 & 0.69 & 0.72 & 0.68 & 0.72 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.71  & 0.71  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.67 & 0.69 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.67 & 0.68 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.47 $\pm$ 0.04 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.39 $\pm$ 0.06 & 0.51 $\pm$ 0.05 \\
+    1 & DBC & - & 100 & Voting & 0.45 $\pm$ 0.03 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.38 $\pm$ 0.05 & 0.49 $\pm$ 0.04 \\
+    1 & Rand & - & 100 & Voting & 0.43 $\pm$ 0.04 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.2 & 0.39 $\pm$ 0.06 & 0.49 $\pm$ 0.04 \\
+    1 & DBC+R & - & 100 & Voting & 0.45 $\pm$ 0.03 & 0.29 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.38 $\pm$ 0.05 & 0.49 $\pm$ 0.04 \\
+    2 & - & Crossval & 100 & Voting & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.69 $\pm$ 0.07 \\
+    2 & - & PSO & 100 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.32 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.7 $\pm$ 0.06 \\
+    3 & - & - & 75 & Voting & 0.46 $\pm$ 0.06 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.41 $\pm$ 0.06 & 0.51 $\pm$ 0.06 \\
+    3 & - & - & 50 & Voting & 0.45 $\pm$ 0.07 & 0.3 $\pm$ 0.04 & 0.6 $\pm$ 0.2 & 0.4 $\pm$ 0.07 & 0.51 $\pm$ 0.06 \\
+    4 & - & - & 100 & Weighted & 0.41 $\pm$ 0.04 & 0.31 $\pm$ 0.03 & 0.78 $\pm$ 0.09 & 0.44 $\pm$ 0.04 & 0.52 $\pm$ 0.06 \\
+    4 & - & - & 100 & Meta & 0.698 $\pm$ 0.006 & 0.0 $\pm$ 0.0 & 0.0 $\pm$ 0.0 & 0.0 $\pm$ 0.0 & 0.51 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 75 & Voting & 0.75 $\pm$ 0.05 & 0.7 $\pm$ 0.2 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.7 $\pm$ 0.05 \\
+    123 & Rand & Crossval & 75 & Voting & 0.75 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.1 & 0.69 $\pm$ 0.06 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.7 $\pm$ 0.05 \\
+    123 & DBC & Crossval & 50 & Voting & 0.74 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
+    123 & Rand & Crossval & 50 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.47 $\pm$ 0.09 & 0.68 $\pm$ 0.05 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.73 $\pm$ 0.03 & 0.59 $\pm$ 0.1 & 0.38 $\pm$ 0.07 & 0.46 $\pm$ 0.07 & 0.69 $\pm$ 0.04 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.1 & 0.38 $\pm$ 0.08 & 0.46 $\pm$ 0.07 & 0.66 $\pm$ 0.06 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.73 $\pm$ 0.03 & 0.58 $\pm$ 0.08 & 0.38 $\pm$ 0.08 & 0.45 $\pm$ 0.07 & 0.69 $\pm$ 0.04 \\
+    124 & DBC & Crossval & 100 & Meta & 0.74 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.52 $\pm$ 0.1 & 0.71 $\pm$ 0.07 \\
+    124 & Rand & Crossval & 100 & Meta & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.74 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.72 $\pm$ 0.07 \\
+    124 & DBC & PSO & 100 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.44 $\pm$ 0.08 & 0.49 $\pm$ 0.07 & 0.71 $\pm$ 0.06 \\
+    124 & Rand & PSO & 100 & Weighted & 0.72 $\pm$ 0.04 & 0.55 $\pm$ 0.08 & 0.46 $\pm$ 0.09 & 0.5 $\pm$ 0.07 & 0.67 $\pm$ 0.04 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.72 $\pm$ 0.04 & 0.55 $\pm$ 0.08 & 0.46 $\pm$ 0.08 & 0.5 $\pm$ 0.06 & 0.67 $\pm$ 0.04 \\
+    124 & DBC & PSO & 100 & Meta & 0.73 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.09 & 0.46 $\pm$ 0.1 & 0.71 $\pm$ 0.07 \\
+    124 & Rand & PSO & 100 & Meta & 0.73 $\pm$ 0.03 & 0.56 $\pm$ 0.08 & 0.43 $\pm$ 0.09 & 0.48 $\pm$ 0.07 & 0.69 $\pm$ 0.06 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.72 $\pm$ 0.04 & 0.5 $\pm$ 0.1 & 0.4 $\pm$ 0.1 & 0.47 $\pm$ 0.09 & 0.68 $\pm$ 0.07 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.73 $\pm$ 0.04 & 0.58 $\pm$ 0.09 & 0.41 $\pm$ 0.09 & 0.47 $\pm$ 0.08 & 0.7 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.09 & 0.4 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.73 $\pm$ 0.03 & 0.57 $\pm$ 0.08 & 0.4 $\pm$ 0.1 & 0.46 $\pm$ 0.09 & 0.69 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.73 $\pm$ 0.03 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.05 & 0.47 $\pm$ 0.05 & 0.68 $\pm$ 0.04 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.74 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.49 $\pm$ 0.1 & 0.68 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.4 $\pm$ 0.05 & 0.48 $\pm$ 0.06 & 0.68 $\pm$ 0.05 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.76 $\pm$ 0.04 & 0.63 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.54 $\pm$ 0.1 & 0.71 $\pm$ 0.08 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.76 $\pm$ 0.04 & 0.63 $\pm$ 0.09 & 0.5 $\pm$ 0.1 & 0.54 $\pm$ 0.1 & 0.73 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.75 $\pm$ 0.04 & 0.62 $\pm$ 0.09 & 0.46 $\pm$ 0.1 & 0.52 $\pm$ 0.09 & 0.72 $\pm$ 0.07 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.74 $\pm$ 0.04 & 0.6 $\pm$ 0.1 & 0.42 $\pm$ 0.1 & 0.49 $\pm$ 0.1 & 0.71 $\pm$ 0.05 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.75 $\pm$ 0.05 & 0.6 $\pm$ 0.1 & 0.5 $\pm$ 0.1 & 0.53 $\pm$ 0.09 & 0.73 $\pm$ 0.05 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.75 $\pm$ 0.04 & 0.61 $\pm$ 0.09 & 0.44 $\pm$ 0.1 & 0.5 $\pm$ 0.09 & 0.72 $\pm$ 0.04 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
