--- a/results/latex/heart.tex
+++ b/results/latex/heart.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.56     & 0.57      & 0.60      & 0.59      & 0.77      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.67   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.40  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.40  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.74     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.84     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.78  & 0.80  & 0.81  & 0.81  & 0.78  & 0.84  & 0.80  & 0.81  \\\\
-\\textbf{12}         & Rand               &              & - & 0.58 & 0.64 & 0.76 & 0.81 & 0.66 & 0.79 & 0.72 & 0.76 \\\\
-                     & DBC+R              &              & - & 0.60 & 0.64 & 0.79 & 0.81 & 0.70 & 0.78 & 0.72 & 0.76 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.82  & 0.82  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.80 & 0.81 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.80 & 0.81 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.51     & 0.54      & 0.55      & 0.67      & 0.79      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.61   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.34  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.34  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.79     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.87     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.83  & 0.87  & 0.79  & 0.83  & 0.79  & 0.90  & 0.80  & 0.86  \\\\
-\\textbf{12}         & Rand               &              & - & 0.55 & 0.62 & 0.81 & 0.83 & 0.63 & 0.79 & 0.72 & 0.76 \\\\
-                     & DBC+R              &              & - & 0.58 & 0.64 & 0.78 & 0.83 & 0.67 & 0.79 & 0.74 & 0.74 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.80  & 0.86  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.80 & 0.83 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.80 & 0.83 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.57     & 0.57      & 0.58      & 0.54      & 0.67      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.75   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.42  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.63     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.76     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.66  & 0.67  & 0.79  & 0.75  & 0.70  & 0.75  & 0.72  & 0.72  \\\\
-\\textbf{12}         & Rand               &              & - & 0.57 & 0.60 & 0.70 & 0.74 & 0.82 & 0.72 & 0.77 & 0.66 \\\\
-                     & DBC+R              &              & - & 0.59 & 0.59 & 0.79 & 0.74 & 0.85 & 0.69 & 0.77 & 0.71 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.79  & 0.73  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.75 & 0.73 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.75 & 0.73 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.53     & 0.55      & 0.56      & 0.51      & 0.71      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.67   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.37  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.37  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.69     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.80     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.72  & 0.74  & 0.79  & 0.78  & 0.73  & 0.81  & 0.74  & 0.77  \\\\
-\\textbf{12}         & Rand               &              & - & 0.56 & 0.60 & 0.71 & 0.78 & 0.68 & 0.75 & 0.71 & 0.70 \\\\
-                     & DBC+R              &              & - & 0.58 & 0.61 & 0.78 & 0.77 & 0.73 & 0.73 & 0.71 & 0.72 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.79  & 0.78  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.77 & 0.77 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.77 & 0.77 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.60     & 0.62      & 0.64      & 0.58      & 0.84      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.75   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.46  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.46  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.80     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.88     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.82  & 0.84  & 0.84  & 0.87  & 0.82  & 0.85  & 0.85  & 0.85  \\\\
-\\textbf{12}         & Rand               &              & - & 0.66 & 0.70 & 0.80 & 0.86 & 0.67 & 0.83 & 0.76 & 0.80 \\\\
-                     & DBC+R              &              & - & 0.67 & 0.70 & 0.83 & 0.87 & 0.74 & 0.84 & 0.74 & 0.81 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.85  & 0.87  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.84 & 0.85 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.84 & 0.85 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
+    1 & DBC & - & 100 & Voting & 0.7 $\pm$ 0.1 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 \\
+    1 & Rand & - & 100 & Voting & 0.4 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.2 \\
+    1 & DBC+R & - & 100 & Voting & 0.4 $\pm$ 0.1 & 0.3 $\pm$ 0.1 & 0.4 $\pm$ 0.2 & 0.4 $\pm$ 0.2 & 0.5 $\pm$ 0.2 \\
+    2 & - & Crossval & 100 & Voting & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    2 & - & PSO & 100 & Voting & 0.84 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.09 & 0.88 $\pm$ 0.07 \\
+    3 & - & - & 75 & Voting & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
+    3 & - & - & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
+    4 & - & - & 100 & Weighted & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.5 $\pm$ 0.3 & 0.5 $\pm$ 0.2 & 0.6 $\pm$ 0.2 \\
+    4 & - & - & 100 & Meta & 0.77 $\pm$ 0.07 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.71 $\pm$ 0.1 & 0.84 $\pm$ 0.06 \\
+    123 & DBC & Crossval & 75 & Voting & 0.78 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.82 $\pm$ 0.09 \\
+    123 & Rand & Crossval & 75 & Voting & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.7 $\pm$ 0.3 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.6 $\pm$ 0.3 & 0.7 $\pm$ 0.3 \\
+    123 & DBC & Crossval & 50 & Voting & 0.8 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
+    123 & Rand & Crossval & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.81 $\pm$ 0.08 & 0.79 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.09 & 0.84 $\pm$ 0.07 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.78 $\pm$ 0.09 & 0.8 $\pm$ 0.2 \\
+    124 & DBC & Crossval & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.75 $\pm$ 0.09 & 0.78 $\pm$ 0.06 & 0.87 $\pm$ 0.08 \\
+    124 & Rand & Crossval & 100 & Meta & 0.81 $\pm$ 0.07 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.78 $\pm$ 0.08 & 0.86 $\pm$ 0.06 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.87 $\pm$ 0.05 \\
+    124 & DBC & PSO & 100 & Weighted & 0.82 $\pm$ 0.06 & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.79 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
+    124 & Rand & PSO & 100 & Weighted & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.84 $\pm$ 0.1 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.8 $\pm$ 0.08 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.84 $\pm$ 0.1 \\
+    124 & DBC & PSO & 100 & Meta & 0.82 $\pm$ 0.05 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.78 $\pm$ 0.06 & 0.9 $\pm$ 0.1 \\
+    124 & Rand & PSO & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.81 $\pm$ 0.05 & 0.83 $\pm$ 0.09 & 0.7 $\pm$ 0.1 & 0.77 $\pm$ 0.07 & 0.85 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.78 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.82 $\pm$ 0.1 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.7 $\pm$ 0.2 & 0.6 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.8 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.85 $\pm$ 0.08 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.2 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.84 $\pm$ 0.04 & 0.9 $\pm$ 0.09 & 0.8 $\pm$ 0.1 & 0.81 $\pm$ 0.06 & 0.85 $\pm$ 0.09 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.79 $\pm$ 0.06 & 0.79 $\pm$ 0.07 & 0.7 $\pm$ 0.1 & 0.75 $\pm$ 0.08 & 0.83 $\pm$ 0.07 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.78 $\pm$ 0.08 & 0.79 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.84 $\pm$ 0.08 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.81 $\pm$ 0.08 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.8 $\pm$ 0.1 & 0.85 $\pm$ 0.09 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.76 $\pm$ 0.08 & 0.76 $\pm$ 0.1 & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.76 $\pm$ 0.08 & 0.7 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.72 $\pm$ 0.09 & 0.81 $\pm$ 0.08 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
