--- a/results/latex/iris.tex
+++ b/results/latex/iris.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.78     & 0.78      & 0.79      & 0.95      & 0.69      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.95   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.74     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.93     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.95  & 0.95  & 0.95  & 0.67  & 0.95  & 0.85  & 0.95  & 0.89  \\\\
-\\textbf{12}         & Rand               &              & - & 0.95 & 0.95 & 0.95 & 0.67 & 0.95 & 0.85 & 0.95 & 0.89 \\\\
-                     & DBC+R              &              & - & 0.95 & 0.95 & 0.95 & 0.67 & 0.95 & 0.85 & 0.95 & 0.89 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.95  & 0.95  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.78     & 0.78      & 0.79      & 0.95      & 0.69      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.95   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.74     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.93     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.95  & 0.95  & 0.95  & 0.67  & 0.95  & 0.85  & 0.95  & 0.89  \\\\
-\\textbf{12}         & Rand               &              & - & 0.95 & 0.95 & 0.95 & 0.67 & 0.95 & 0.85 & 0.95 & 0.89 \\\\
-                     & DBC+R              &              & - & 0.95 & 0.95 & 0.95 & 0.67 & 0.95 & 0.85 & 0.95 & 0.89 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.95  & 0.95  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.95     & 0.95      & 0.94      & 0.95      & 0.85      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.96   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.96  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.96  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.96     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.96     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.95  & 0.96  & 0.95  & 0.91  & 0.95  & 0.93  & 0.96  & 0.96  \\\\
-\\textbf{12}         & Rand               &              & - & 0.95 & 0.96 & 0.95 & 0.91 & 0.95 & 0.93 & 0.96 & 0.96 \\\\
-                     & DBC+R              &              & - & 0.95 & 0.96 & 0.95 & 0.91 & 0.95 & 0.93 & 0.96 & 0.96 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.95  & 0.96  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.96 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.95 & 0.96 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.82     & 0.82      & 0.83      & 0.95      & 0.72      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.95   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.95  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.80     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.94     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.95  & 0.95  & 0.95  & 0.75  & 0.95  & 0.87  & 0.95  & 0.91  \\\\
-\\textbf{12}         & Rand               &              & - & 0.95 & 0.95 & 0.95 & 0.75 & 0.95 & 0.87 & 0.95 & 0.91 \\\\
-                     & DBC+R              &              & - & 0.95 & 0.95 & 0.95 & 0.75 & 0.95 & 0.87 & 0.95 & 0.91 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.95  & 0.95  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.95 & 0.95 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.96     & 0.96      & 0.96      & 0.97      & 0.91      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.96   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.96  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.96  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.98     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.96     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.96  & 0.97  & 0.96  & 0.84  & 0.96  & 0.92  & 0.97  & 0.95  \\\\
-\\textbf{12}         & Rand               &              & - & 0.96 & 0.97 & 0.96 & 0.84 & 0.96 & 0.92 & 0.97 & 0.95 \\\\
-                     & DBC+R              &              & - & 0.96 & 0.97 & 0.96 & 0.84 & 0.96 & 0.92 & 0.97 & 0.95 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.96  & 0.99  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.96 & 0.99 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.99 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.78 $\pm$ 0.08 & 0.78 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
+    1 & DBC & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
+    1 & Rand & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
+    1 & DBC+R & - & 100 & Voting & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.04 \\
+    2 & - & Crossval & 100 & Voting & 0.74 $\pm$ 0.08 & 0.74 $\pm$ 0.08 & 0.96 $\pm$ 0.03 & 0.8 $\pm$ 0.04 & 0.98 $\pm$ 0.04 \\
+    2 & - & PSO & 100 & Voting & 0.93 $\pm$ 0.06 & 0.93 $\pm$ 0.06 & 0.96 $\pm$ 0.04 & 0.94 $\pm$ 0.06 & 0.96 $\pm$ 0.05 \\
+    3 & - & - & 75 & Voting & 0.78 $\pm$ 0.08 & 0.78 $\pm$ 0.08 & 0.95 $\pm$ 0.03 & 0.82 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
+    3 & - & - & 50 & Voting & 0.79 $\pm$ 0.08 & 0.79 $\pm$ 0.08 & 0.94 $\pm$ 0.02 & 0.83 $\pm$ 0.05 & 0.96 $\pm$ 0.05 \\
+    4 & - & - & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.05 \\
+    4 & - & - & 100 & Meta & 0.7 $\pm$ 0.2 & 0.7 $\pm$ 0.2 & 0.9 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.91 $\pm$ 0.1 \\
+    123 & DBC & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    123 & Rand & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    123 & DBC & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    123 & Rand & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & DBC & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
+    124 & Rand & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.67 $\pm$ 0.06 & 0.67 $\pm$ 0.06 & 0.91 $\pm$ 0.09 & 0.75 $\pm$ 0.05 & 0.84 $\pm$ 0.04 \\
+    124 & DBC & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & Rand & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    124 & DBC & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.99 $\pm$ 0.02 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.95 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.96 $\pm$ 0.08 & 0.95 $\pm$ 0.08 & 0.97 $\pm$ 0.06 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.8 $\pm$ 0.2 & 0.8 $\pm$ 0.2 & 0.93 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.9 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.96 $\pm$ 0.07 & 0.9 $\pm$ 0.1 & 0.95 $\pm$ 0.08 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
