--- a/results/latex/wine.tex
+++ b/results/latex/wine.tex
@@ -1,113 +1,50 @@
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.57     & 0.58      & 0.64      & 0.95      & 0.50      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.55   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.60  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.60  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.58     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.87     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.61  & 0.62  & 0.98  & 0.98  & 0.98  & 0.98  & 0.96  & 0.97  \\\\
-\\textbf{12}         & Rand               &              & - & 0.65 & 0.65 & 0.98 & 0.98 & 0.98 & 0.98 & 0.97 & 0.97 \\\\
-                     & DBC+R              &              & - & 0.65 & 0.65 & 0.98 & 0.98 & 0.98 & 0.98 & 0.96 & 0.96 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.96  & 0.98  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.98 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.97 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.57     & 0.58      & 0.64      & 0.95      & 0.50      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.55   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.60  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.60  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.58     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.87     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.61  & 0.62  & 0.98  & 0.98  & 0.98  & 0.98  & 0.96  & 0.97  \\\\
-\\textbf{12}         & Rand               &              & - & 0.65 & 0.65 & 0.98 & 0.98 & 0.98 & 0.98 & 0.97 & 0.97 \\\\
-                     & DBC+R              &              & - & 0.65 & 0.65 & 0.98 & 0.98 & 0.98 & 0.98 & 0.96 & 0.96 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.96  & 0.98  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.98 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.97 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.86     & 0.83      & 0.88      & 0.96      & 0.87      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.93   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.91  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.91  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.85     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.94     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.94  & 0.96  & 0.98  & 0.98  & 0.98  & 0.98  & 0.97  & 0.98  \\\\
-\\textbf{12}         & Rand               &              & - & 0.93 & 0.95 & 0.98 & 0.98 & 0.98 & 0.98 & 0.98 & 0.98 \\\\
-                     & DBC+R              &              & - & 0.94 & 0.97 & 0.98 & 0.98 & 0.98 & 0.98 & 0.97 & 0.97 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.97  & 0.98  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.96 & 0.98 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.97 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.65     & 0.65      & 0.72      & 0.95      & 0.59      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.65   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.67  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.66  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.65     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.89     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.71  & 0.72  & 0.98  & 0.98  & 0.98  & 0.98  & 0.96  & 0.97  \\\\
-\\textbf{12}         & Rand               &              & - & 0.72 & 0.74 & 0.98 & 0.98 & 0.98 & 0.98 & 0.97 & 0.97 \\\\
-                     & DBC+R              &              & - & 0.73 & 0.75 & 0.98 & 0.98 & 0.98 & 0.98 & 0.96 & 0.96 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.96  & 0.98  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.95 & 0.98 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.96 & 0.97 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
-
-
-\\begin{tabular}{llllllllllll}
-\\toprule
-                     &                    &                  & \\multicolumn{9}{c}{\\textbf{Experiment Variation}}  \\\\ \\midrule
-                     &                    &              & \\textbf{-}      & \\textbf{3}      & \\textbf{3}      & \\textbf{4}       & \\textbf{4}       & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      & \\textbf{34}      \\\\ \\midrule
-                     &                    & \\textbf{\%} & 100              & 75               & 50               & 100               & 100               & 75                & 75                & 50                & 50                \\\\ \\midrule
-                     & \\textbf{Cluster.} &              & MV               & MV               & MV               & WM                & MC                & WM                & MC                & WM                & MC                \\\\ \\midrule
-\\textbf{-}          & -                  &              & 0.73     & 0.74      & 0.77      & 0.99      & 0.69      & -      & -      & -      & -      \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & 0.99   & -   & -   & -   & -   & -   & -   & -   & -   \\\\
-\\textbf{1}          & Rand               &              & 0.99  & -  & -  & -  & -  & -  & -  & -  & -  \\\\
-                     & DBC+R              &              & 0.99  & -  & -  & -  & -  & -  & -  & -  & -  \\\\ \\midrule
-\\textbf{2}          & -                  &              & 0.80     & -        & -        & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\textbf{5}          & -                  &              & 0.95     & -        & -     & -     & -     & -     & -     & -     & -  \\\\ \\midrule
-\\multirow{3}{*}{ }  & DBC                &              & -  & 0.99  & 0.97  & 0.99  & 1.00  & 0.99  & 1.00  & 0.98  & 1.00  \\\\
-\\textbf{12}         & Rand               &              & - & 0.99 & 0.98 & 0.99 & 1.00 & 0.99 & 1.00 & 0.99 & 1.00 \\\\
-                     & DBC+R              &              & - & 0.99 & 0.98 & 0.99 & 1.00 & 0.99 & 1.00 & 0.99 & 1.00 \\\\ \\midrule
-\\multirow{3}{*}{  } & DBC                &              & -  & -  & -  & 0.99  & 0.99  & -  & -  & -  & -  \\\\
-\\textbf{15}         & Rand               &              & - & - & - & 0.98 & 1.00 & - & - & - & - \\\\
-                     & DBC+R              &              & - & - & - & 0.99 & 1.00 & - & - & - & - \\\\
-\\bottomrule
-\\end{tabular}
-}
+\begin{table}[ht]
+    \centering
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{llllllllll}
+    \toprule
+    & \textbf{Clusters(1)} & \textbf{Clf(2)} & \textbf{\%(3)} & \textbf{Fusion(4)} & \textbf{Accuracy} & \textbf{Recall} & \textbf{Precision} & \textbf{F1-Score} & \textbf{AUC} \\ \midrule
+    0 & - & - & 100 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.9 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    1 & DBC & - & 100 & Voting & 0.55 $\pm$ 0.05 & 0.55 $\pm$ 0.05 & 0.93 $\pm$ 0.02 & 0.65 $\pm$ 0.04 & 0.99 $\pm$ 0.01 \\
+    1 & Rand & - & 100 & Voting & 0.6 $\pm$ 0.09 & 0.6 $\pm$ 0.09 & 0.91 $\pm$ 0.04 & 0.67 $\pm$ 0.05 & 0.99 $\pm$ 0.02 \\
+    1 & DBC+R & - & 100 & Voting & 0.6 $\pm$ 0.08 & 0.6 $\pm$ 0.08 & 0.91 $\pm$ 0.04 & 0.66 $\pm$ 0.05 & 0.99 $\pm$ 0.02 \\
+    2 & - & Crossval & 100 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.7 $\pm$ 0.1 & 0.8 $\pm$ 0.1 \\
+    2 & - & PSO & 100 & Voting & 0.87 $\pm$ 0.09 & 0.87 $\pm$ 0.09 & 0.94 $\pm$ 0.05 & 0.89 $\pm$ 0.07 & 0.95 $\pm$ 0.04 \\
+    3 & - & - & 75 & Voting & 0.6 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.8 $\pm$ 0.1 & 0.6 $\pm$ 0.1 & 0.7 $\pm$ 0.1 \\
+    3 & - & - & 50 & Voting & 0.64 $\pm$ 0.09 & 0.64 $\pm$ 0.09 & 0.9 $\pm$ 0.1 & 0.72 $\pm$ 0.1 & 0.77 $\pm$ 0.1 \\
+    4 & - & - & 100 & Weighted & 0.95 $\pm$ 0.06 & 0.95 $\pm$ 0.06 & 0.96 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
+    4 & - & - & 100 & Meta & 0.5 $\pm$ 0.08 & 0.5 $\pm$ 0.08 & 0.87 $\pm$ 0.09 & 0.59 $\pm$ 0.07 & 0.7 $\pm$ 0.1 \\
+    123 & DBC & Crossval & 75 & Voting & 0.61 $\pm$ 0.07 & 0.61 $\pm$ 0.07 & 0.94 $\pm$ 0.04 & 0.71 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
+    123 & Rand & Crossval & 75 & Voting & 0.65 $\pm$ 0.06 & 0.65 $\pm$ 0.06 & 0.93 $\pm$ 0.06 & 0.72 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
+    123 & DBC+R & Crossval & 75 & Voting & 0.65 $\pm$ 0.06 & 0.65 $\pm$ 0.06 & 0.94 $\pm$ 0.06 & 0.73 $\pm$ 0.06 & 0.99 $\pm$ 0.02 \\
+    123 & DBC & Crossval & 50 & Voting & 0.62 $\pm$ 0.06 & 0.62 $\pm$ 0.06 & 0.96 $\pm$ 0.04 & 0.72 $\pm$ 0.06 & 0.97 $\pm$ 0.03 \\
+    123 & Rand & Crossval & 50 & Voting & 0.65 $\pm$ 0.05 & 0.65 $\pm$ 0.05 & 0.95 $\pm$ 0.06 & 0.74 $\pm$ 0.06 & 0.98 $\pm$ 0.03 \\
+    123 & DBC+R & Crossval & 50 & Voting & 0.65 $\pm$ 0.04 & 0.65 $\pm$ 0.04 & 0.97 $\pm$ 0.05 & 0.75 $\pm$ 0.05 & 0.98 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
+    124 & Rand & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
+    124 & DBC+R & Crossval & 100 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
+    124 & DBC & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 1.0 $\pm$ 0.001 \\
+    124 & Rand & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.999 $\pm$ 0.002 \\
+    124 & DBC+R & Crossval & 100 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.999 $\pm$ 0.002 \\
+    124 & DBC & PSO & 100 & Weighted & 0.96 $\pm$ 0.04 & 0.96 $\pm$ 0.04 & 0.97 $\pm$ 0.03 & 0.96 $\pm$ 0.04 & 0.99 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Weighted & 0.95 $\pm$ 0.05 & 0.95 $\pm$ 0.05 & 0.96 $\pm$ 0.03 & 0.95 $\pm$ 0.05 & 0.98 $\pm$ 0.02 \\
+    124 & DBC+R & PSO & 100 & Weighted & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.96 $\pm$ 0.03 & 0.99 $\pm$ 0.02 \\
+    124 & DBC & PSO & 100 & Meta & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.03 & 0.99 $\pm$ 0.02 \\
+    124 & Rand & PSO & 100 & Meta & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.03 & 0.98 $\pm$ 0.02 & 0.98 $\pm$ 0.03 & 1.0 $\pm$ 0.01 \\
+    124 & DBC+R & PSO & 100 & Meta & 0.97 $\pm$ 0.03 & 0.97 $\pm$ 0.03 & 0.97 $\pm$ 0.02 & 0.97 $\pm$ 0.03 & 1.0 $\pm$ 0.01 \\
+    1234 & DBC & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 75 & Weighted & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.99 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 50 & Weighted & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.06 & 0.98 $\pm$ 0.03 \\
+    1234 & Rand & Crossval & 50 & Weighted & 0.97 $\pm$ 0.06 & 0.97 $\pm$ 0.06 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.06 & 0.99 $\pm$ 0.03 \\
+    1234 & DBC+R & Crossval & 50 & Weighted & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.99 $\pm$ 0.03 \\
+    1234 & DBC & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.05 & 0.999 $\pm$ 0.004 \\
+    1234 & Rand & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.998 $\pm$ 0.004 \\
+    1234 & DBC+R & Crossval & 75 & Meta & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.98 $\pm$ 0.04 & 0.998 $\pm$ 0.004 \\
+    1234 & DBC & Crossval & 50 & Meta & 0.97 $\pm$ 0.05 & 0.97 $\pm$ 0.05 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.05 & 0.999 $\pm$ 0.004 \\
+    1234 & Rand & Crossval & 50 & Meta & 0.97 $\pm$ 0.06 & 0.97 $\pm$ 0.06 & 0.98 $\pm$ 0.04 & 0.97 $\pm$ 0.06 & 0.998 $\pm$ 0.005 \\
+    1234 & DBC+R & Crossval & 50 & Meta & 0.96 $\pm$ 0.06 & 0.96 $\pm$ 0.06 & 0.97 $\pm$ 0.04 & 0.96 $\pm$ 0.05 & 0.998 $\pm$ 0.005 \\
+    \bottomrule
+    \end{tabular}
+    }
+\end{table}
